--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -147,6 +147,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * Italian: {{t+|it|semplice}}
 * Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui|sc=Jpan}}
 * {{trreq|jv}}
+* Jèrriais: {{t|roa-jer|sîmpl'ye|m|f}}
 * {{trreq|kn}}
 * Kazakh: {{t|kk|қарапайым|tr=qarapayım|sc=Cyrl}}
 * Khmer: {{t|km|មិនពិបាក|tr=mɨn pi’baak|sc=Khmr}}
