--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -10,61 +10,60 @@
 # ''Mustela nivalis'', the smallest member of the [[weasel]] [[genus]] ''(Mustela)''.
 
 ====Translations====
-{{rfc-tsort|duplicate language: Serbo-Croatian}}
-{{trans-top|Weasel}}
+{{trans-top|''Mustela nivalis''}}
 * Albanian: [[nuse e lalës]]
-* Basque: [[erbinude]]
+* Basque: {{t|eu|erbinude}}
 * Belarusian: {{t-|be|ласка}}
-* Breton: [[kaerell]]
-* Bulgarian: [[невестулка]] (nevestulka)
-* Catalan: [[mostela]]
-* Serbo-Croatian: {{t-|sh|lasica}}
-* Czech: [[lasice]], [[kolčava]]
+* Breton: {{t|br|kaerell}}
+* Bulgarian: {{t|bg|невестулка|tr=nevestulka}}
+* Catalan: {{t|ca|mostela|f}}
+* Czech: {{t|cs|lasice}}, {{t|cs|kolčava}}
 * Danish: {{t+|da|brud}}
 * Dutch: {{t+|nl|wezel|m}}
-* Esperanto: [[mustelo]]
-* Estonian: [[nirk]]
+* Esperanto: {{t|eo|mustelo}}
+* Estonian: {{t|et|nirk}}
 * Finnish: {{t+|fi|lumikko}}
 * French: {{t+|fr|belette|f}}
-* Friulian: [[bilite]]
-* Galician: [[donicela]], [[denociña]]
+* Friulian: {{t|fur|bilite}}
+* Galician: {{t|gl|donicela|f}}, {{t|gl|denociña|f}}
 * German: {{t+|de|Wiesel|n}}
 * Greek: {{t+|el|νυφίτσα|f|tr=nyfítsa|sc=Grek}}
 * Hungarian: {{t+|hu|menyét}}
 * Icelandic: {{t+|is|hreysiköttur}}, {{t-|is|vesla}}
 * Irish: {{t-|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
-* Korean: [[무산쇠족제비]] (musansoejokjebi)
-* Ladin: [[belora]]
-* Latin: [[Mustela nivalis]] {{f}}
-* Latvian: [[zebiekste]]
+* Korean: {{t|ko|무산쇠족제비|tr=musansoejokjebi}}
+* Ladin: {{t|lld|belora}}
+* Latvian: {{t|lv|zebiekste}}
 {{trans-mid}}
 * Lithuanian: {{t-|lt|žebenkštis}}
-* Lower Sorbian: [[łasyca]], [[łasycka]]
-* Macedonian: [[невестулка]] (nevestulka)
-* Maltese: [[ballottra]]
+* Lower Sorbian: {{t|hsb|łasyca}}, {{t|hsb|łasycka}}
+* Macedonian: {{t|mk|невестулка|tr=nevestulka}}
+* Maltese: {{t|mt|ballottra}}
 * Navajo: {{tø|nv|dlǫ́ʼii yázhí}}
 * Norwegian: {{t-|no|snømus}}
-* Occitan: [[mostèla]], [[polida]]
-* Polish: [[łasica]] {{f}}
-* Portuguese: {{t+|pt|doninha}}
-* Romani: [[boriori]] {{f}}
-* Romanian: [[nevăstuica]]
-* Romansch: [[mustaila]]
+* Occitan: {{t|oc|mostèla|f}}, {{t|oc|polida|f}}
+* Polish: {{t|pl|łasica|f}}
+* Portuguese: {{t+|pt|doninha|f}}
+* Romani: {{t|rom|boriori|f}}
+* Romanian: {{t|ro|nevăstuica}}
+* Romansch: {{t|rm|mustaila}}
 * Russian: {{t+|ru|ласка|tr=laska|f}}
 * Sami: [[nirpi]]
 * Sardinian: [[bucca de mele]], [[bucchemeli]]
-* Scottish Gaelic: [[neas bheag]]
-* Serbo-Croatian: [[ласица]] ([[lasica]])
+* Scottish Gaelic: {{t|gd|neas bheag}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|ласица|f}}
+*: Roman: {{t|sh|lasica}}
 * Slovak: {{t-|sk|lasica}}
 * Slovene: {{t+|sl|podlasica}}
-* Spanish: [[mostela]] {{f}}
+* Spanish: {{t|es|mostela|f}}
 * Swedish: {{t-|sv|vessla}}
 * Turkish: {{t+|tr|gelincik}}
-* Ukrainian: [[ласиця]] (lasycja)
-* Upper Sorbian: [[kohlica]]
-* Welsh: [[bronwen]], [[gwenci]]
-* West Frisian: [[wezeling]]
+* Ukrainian: {{t|uk|ласиця|tr=lasycja}}
+* Upper Sorbian: {{t|hsb|kohlica}}
+* Welsh: {{t|cy|bronwen}}, {{t|cy|gwenci}}
+* West Frisian: {{t|fy|wezeling}}
 {{trans-bottom}}
 
 [[Category:en:Mustelids]]
