--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -71,6 +71,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}},  {{t-|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t+|hu|zsaru}}
 * Italian: {{t|it|piedipiatti}}
+* Macedonian: {{t|mk|цајкан|m|tr=cájkan|sc=Cyrl}}, {{t|mk|џандар|m|tr=džándar|sc=Cyrl}}
 * Norwegian: {{t+|no|purk|m}}
 {{trans-mid}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
