t+ie:[[insul]] t-balance ([[WT:EDIT|Assisted]]) <island#18754077>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -137,7 +137,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Ilocano: {{tø|ilo|puro}}
 * Indonesian: {{t+|id|pulau}}, {{t-|id|nusa}}
 * {{trreq|ia}}
-* {{trreq|ie}}
+* Interlingue: {{t|ie|insul}}
 * Irish: {{t+|ga|oileán|m}}, {{t-|ga|inis|f}}
 * Italian: {{t+|it|isola|f}}
 * Japanese: {{t+|ja|島|tr=[[しま]], shima}}
@@ -154,9 +154,9 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Kumyk: {{tø|kum|атав|tr=ataw|sc=Cyrl}}
 * Kurdish:
 *: Kurmanji: {{t|ku|girav|f|sc=ku-Arab}}
-{{trans-mid}}
 * Kyrgyz: {{t-|ky|арал|tr=aral|sc=Cyrl}}
 * Lakota: {{tø|lkt|wíta}}
+{{trans-mid}}
 * Lao: {{t-|lo|ດອນ|tr=döön|sc=Laoo}}
 * Latgalian: {{qualifier|ocean, sea}} {{tø|ltg|jiursola}}, {{qualifier|lake}} {{tø|ltg|azarsola}}, {{qualifier|river}} {{tø|ltg|upsola}}
 * Latin: {{t+|la|insula|f}}
