--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -53,14 +53,18 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Arabic: {{t-|ar|ارنب|m|alt=أرْنَب|tr=’árnab}}
 *: Egyptian Arabic: {{tø|arz|ارنب|m|tr='arnab|sc=Arab}}
 * Armenian: {{t-|hy|ճագար|tr=č̣agar|sc=Armn}}
+* {{trreq|rup}}
+* {{trreq|ast}}
 * Azeri: {{t+|az|dovşan}}
-* Basque: [[untxi]]
+* {{trreq|ba}}
+* Basque: {{t|eu|untxi}}
 * Belarusian: {{t-|be|трус|m|tr=trus}}, {{t-|be|кролік|m|tr=królik|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
 * Bengali: {{t-|bn|খরগোশ|tr=khôrgosh|sc=Beng}}
-* Breton: [[lapin]], [[konikl]]
+* Breton: {{t|br|lapin}}, {{t|br|konikl}}
 * Bulgarian: {{t+|bg|заек|m|tr=zaek}}
+* {{trreq|my}}
 * Catalan: {{t+|ca|conill}}
-* Cherokee: [[ᏥᏍᏚ]] (tsisdu)
+* Cherokee: {{t|chr|ᏥᏍᏚ|tr=tsisdu}}
 * Chickasaw: [[chokfi]]
 * Chinese:
 *: Mandarin: {{t|cmn|兔子|tr=tùzi|sc=Hani}}, {{qualifier|white rabbit}} {{t|cmn|白兔|tr=báitù|sc=Hani}}
@@ -69,19 +73,19 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Dena'ina: {{tø|tfn|hvaya}}
 * Dutch: {{t+|nl|konijn|n}}
 * Esperanto: {{qualifier|♂♀}} {{t-|eo|kuniklo}}, {{qualifier|♂}} {{t-|eo|virkuniklo}}, {{qualifier|neologism ♂}} {{t-|eo|kunikliĉo}},{{qualifier|♀}} {{t-|eo|kuniklino}}, {{qualifier|♂♀ offspring}} {{t-|eo|kuniklido}}, {{qualifier|diminutive ♂♀}} {{t-|eo|kunikleto}}
-* Estonian: [[küülik]]
-* Ewe: [[fɔmizi]]
+* Estonian: {{t|et|küülik}}
+* Ewe: {{t|ee|fɔmizi}}
 * Faroese: {{t-|fo|kanin}}
 * Finnish: {{t+|fi|kaniini}}, {{t+|fi|kani}}
 * French: {{t+|fr|lapin|m}}
-* Friulian: [[cunin]]
-* Galician: [[coello]]
+* Friulian: {{t|fur|cunin}}
+* Galician: {{t|gl|coello}}
 * Georgian: {{t-|ka|ბოცვერი|tr=botc'veri|sc=Geor}}
 * German: {{t+|de|Kaninchen|n}}, {{t+|de|Karnickel|n}} {{qualifier|colloquial}}
 * Goguryeo: {{tø|zkg|烏斯含|tr=eosaham}}
 * Greek: {{t+|el|κουνέλι|n|tr=kounéli}}
 *: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
-* Gujarati: [[સસલું]] (saslu.n)
+* Gujarati: {{t|gu|સસલું|tr=sasluṃ}}
 * Hebrew: {{t+|he|ארנב|m|tr=arnáv}}
 * Hindi: {{t-|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t-|hi|शशक|m|tr=śaśak|sc=Deva}}
 * Hopi: {{tø|hop|taavo}}
@@ -89,66 +93,75 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Icelandic: {{t+|is|kanína}}
 * Ido: {{qualifier|♂♀}} {{t+|io|kuniklo}}, {{qualifier|♂}} {{t-|io|kuniklulo}}, {{qualifier|♀}} {{t-|io|kuniklino}}, {{qualifier|♂♀ offspring}} {{t-|io|kuniklyuno}}, {{qualifier|♂ offspring}} {{t-|io|kuniklyunulo}}, {{qualifier|♀ offspring}} {{t-|io|kuniklyunino}}, {{qualifier|diminutive ♂♀}} {{t-|io|kunikleto}}
 * Indonesian: {{t+|id|kelinci}}
-* Interlingua: [[conilio]]
+* Interlingua: {{t|ia|conilio}}
 * Interlingue: {{t|ie|cunicul}}
 * Irish: {{t+|ga|coinín}}
 * Italian: {{t+|it|coniglio|m}}
 * Japanese: {{t+|ja|兎|tr=[[うさぎ]], usagi|sc=Jpan}}, {{t-|ja|ウサギ|tr=usagi|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|lapîn|m}}
+* {{trreq|kn}}
+* {{trreq|kk}}
 * Khmer: {{t-|km|ទន្សាយគល់|tr=tʊənsaay kʊəl|sc=Khmr}}
 * Korean: {{t+|ko|토끼|tr=tokki|sc=Hang}}
 * Kurdish:
 *: Kurmanji: {{t|ku|kêroşk}}, {{t|ku|xirrnîfk}}
 *: Sorani: {{ku-Arab|[[که‌روێشک]]}} (kêrwişk)
+* {{trreq|ky}}
 * Ladin: [[conicio]]
 * Ladino: [[konejo]]
 * Latin: {{t+|la|cuniculus|alt=cunīculus|m}}
-* Latvian: [[trusis]]
+* Latvian: {{t|lv|trusis}}
 * Lithuanian: {{t+|lt|triušis}}
 * Lojban: {{t-|jbo|ractu}}
 {{trans-mid}}
 * Lower Sorbian: [[karnikel]]
-* Macedonian: [[заjак]] (zajak) {{m}}
+* {{trreq|lb}}
+* Macedonian: {{t|mk|заjак|m|tr=zajak}}
 * Malay:
 *: Rumi: {{t+|ms|arnab}}, {{t-|ms|kelinci}}, {{t-|ms|kucing belanda}}, {{t-|ms|kuilu}}, {{t-|ms|terwelu}}
 *: Jawi: {{t-|ms|ارنب|sc=Arab}}, {{t-|ms|کلينچي|sc=Arab}}, {{t-|ms|کوچيڠ بلندا|sc=Arab}}, {{t-|ms|کويلو|sc=Arab}}, {{t-|ms|ترويلو|sc=Arab}}
+* {{trreq|ml}}
 * Maltese: {{t-|mt|fenek|m}}
 * Manx: {{t-|gv|conning|f}}
-* Marathi: [[ससा]] {{m}}, [[सशी]] {{f}}
+* {{trreq|mi}}
+* Marathi: {{t|mr|ससा|m}}, {{t|mr|सशी|f}}
 * Maricopa: {{tø|mrc|xalyaw}}
+* {{trreq|mwl}}
 * Montagnais: {{tø|moe|uapush}}
 * Nahuatl: [[tochtli]]
 * Navajo: {{tø|nv|gah}}
 * Northern Sami: [[kaniidna]]
 * Norwegian: {{t+|no|kanin|m}}
 * O'odham: {{tø|ood|tohbi}}
-* Occitan: [[conilh]] {{m}}, [[lapin]] {{m}}
+* Occitan: {{t|oc|conilh|m}}, {{t|oc|lapin|m}}
+* {{trreq|ps}}
 * Persian: {{t+|fa|خرگوش|tr=xarguš|sc=fa-Arab}}
 * Polish: {{t+|pl|królik|m}}
 * Portuguese: {{t+|pt|coelho|m}}
 * Romani: [[shoshoy]] {{m}}, [[shoshni]] {{f}}
-* Romanian: [[iepure]], [[iepure de vizuină]]
-* Romansch: [[cunigl]]
+* Romanian: {{t|ro|iepure}}, {{t|ro|iepure de vizuină}}
+* Romansch: {{t|rm|cunigl}}
 * Russian: {{t+|ru|кролик|m|tr=królik}}, {{t+|ru|крольчиха|f|tr=krol’číxa}}
 * Sanskrit: {{t-|sa|शशक|tr=śaśaka|sc=Deva}}
-* Sardinian: [[cunillu]], [[cacciappu]]
+* Sardinian: {{t|scn|cunillu}}, {{t|scn|cacciappu}}
 * Scots: {{tø|sco|kinnen}}
 * Scottish Gaelic: {{t-|gd|coineanach|m}}, {{t-|gd|rabaid|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|зец|m|alt=зе̑ц|sc=Cyrl}}, {{t-|sh|кунић|m|alt=ку̀нӣћ|sc=Cyrl}}
 *: Roman: {{t-|sh|zec|m|alt=zȇc}}, {{t-|sh|kunić|m|alt=kùnīć}}
 * Sicilian: {{t+|scn|cunigghiu|m}}
-* Slovak: [[králik]] {{m}}
+* {{trreq|si}}
+* Slovak: {{t|sk|králik|m}}
 * Slovene: {{t+|sl|kunec|m}}
-* Somali: [[bakayle]]
+* Somali: {{t|so|bakayle}}
 * South Slavey: {{tø|xsl|gah}}
 * Spanish: {{t+|es|conejo|m}}
 * Swahili: {{t+|sw|sungura}}
 * Swedish: {{t+|sv|kanin|c}}
 * Tagalog: [[kuneho]]
-* Tamil: {{t+|ta|முயல்|sc=Thai}}
+* Tamil: {{t+|ta|முயல்|tr=|sc=Taml}}
 * Taos: [[pȉwéna]]
-* Telugu: [[కుందేలు]] (kumdealu)
+* Telugu: {{t|te|కుందేలు|tr=kuṅdēlu}}
 * Thai: {{t+|th|กระต่าย|tr=kratàai}}
 * Tibetan: {{t-|bo|ཡོས|tr=yos|sc=Tibt}}
 * Tswana: {{t-|tn|mmutla}}
@@ -162,8 +175,8 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Venetian: {{tø|vec|cunicio|m}}
 * Vietnamese: {{t+|vi|thỏ}}
 * Volapük: {{qualifier|♂♀}} {{t-|vo|krolig}}, {{qualifier|♂}} {{t-|vo|hikrolig}}, {{qualifier|♀}} {{t-|vo|jikrolig}}, {{qualifier|♂♀ offspring}} {{t-|vo|kroligül}}, {{qualifier|♂ offspring}} {{t-|vo|hikroligül}}, {{qualifier|♀ offspring}} {{t-|vo|jikroligül}}, {{qualifier|diminutive ♂♀}} {{t-|vo|kroligil}}, {{qualifier|diminutive ♂}} {{t-|vo|hikroligil}}, {{qualifier|diminutive ♀}} {{t-|vo|jikroligil}}
-* Welsh: [[cwningen]]
-* West Frisian: [[knyn]]
+* Welsh: {{t|cy|cwningen}}
+* West Frisian: {{t|fy|knyn}}
 * Wolof: {{t-|wo|njomboor|alt=njomboor ji}}
 * Yiddish: {{t-|yi|קיניגל|n|tr=kinigl|sc=Hebr}}, {{t-|yi|קראָליק|m|tr=krolik|sc=Hebr}}
 {{trans-bottom}}
