--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -43,8 +43,8 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Bengali: {{t-|bn|রক্ত ঝরা|sc=Beng}}, {{t-|bn|রক্ত পড়া|sc=Beng}}
 * Bulgarian: {{t-|bg|тече кръв}}
 * Catalan: {{t+|ca|sagnar}}
-* {{ttbc|Chinese}}: {{t-|cmn|流血|tr=liúxuè|sc=Hani}}, {{t|cmn|放血|tr=fàngxuè|sc=Hani}}
-*: {{ttbc|cmn}}: {{t|cmn|出血}}
+* Chinese: 
+*: {{ttbc|cmn}}: {{t|cmn|出血}}, {{t-|cmn|流血|tr=liúxuè|sc=Hani}}, {{t|cmn|放血|tr=fàngxuè|sc=Hani}}
 * Czech: {{t-|cs|krvácet}}
 * Danish: {{t-|da|bløde}}
 * Dutch: {{t+|nl|bloeden}}
@@ -68,7 +68,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Japanese: {{t-|ja|出血|alt=出血する|tr=しゅっけつする, shukketsu suru}}, [[血]]を[[流す]] ([[ち]]を[[ながす]], chi o nagasu)
 * Khmer: {{t-|km|ចេញឈាម|tr=jeuñ chīəum}}
 * Korean: {{t-|ko|피를 흘리다|sc=Hang}}
-* Latin: {{t-|la|sanguinem mitto|alt=sanguinem mittō}},  {{t-|la|sanguino|alt=sanguinō}}
+* Latin: {{t-|la|sanguinem mitto|alt=sanguinem mittō}}, {{t-|la|sanguino|alt=sanguinō}}
 * Latvian: {{t+|lv|asiņot}}
 * Lithuanian: {{t+|lt|kraujuoti}}
 * Mongolian: {{t-|mn|хуудас дүүрэн зураг|tr=huudas düüren zurag|sc=Cyrl}}
@@ -80,7 +80,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Romanian: {{t+|ro|sângera}}
 * Russian: {{t+|ru|кровоточить|tr=krovotočít’}} (seldom used, [[иметь кровотечение]] ''imét' krovotečénije'', [[идёт кровь]] ''idjót krov''')
 * Sardinian: {{t-|sc|sambenàre}}, {{t-|sc|sambenàri}}, {{t-|sc|sanguinai}}
-* Scottish Gaelic: {{t-|gd|leig fuil}},  {{qualifier|nose}} {{t-|gd|leum}}
+* Scottish Gaelic: {{t-|gd|leig fuil}}, {{qualifier|nose}} {{t-|gd|leum}}
 * Slovak: {{t-|sk|krvácať}}
 * Slovene: {{t+|sl|krvaveti}}
 * Spanish: {{t-|es|sangrar}}
@@ -118,7 +118,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 {{trans-top|spread and stain}}
 * Swedish: {{t+|sv|blöda}}
 {{trans-mid}}
-* Tagalog: {{t-|tl|pagkalat}},  {{t-|tl|pagtae}}
+* Tagalog: {{t-|tl|pagkalat}}, {{t-|tl|pagtae}}
 {{trans-bottom}}
 
 {{trans-top|remove air bubbles}}
