--- a/en/l/leave out.741825.wikitext
+++ b/en/l/leave out.741825.wikitext
@@ -18,7 +18,7 @@
 |passage=Capello mystifyingly '''left Ashley Young out''' despite a match-winning display in the Euro 2012 qualifier win in Wales in March and he only underlined the folly of the decision by emerging as substitute at half-time and striking a fine equaliser six minutes after coming on.}}
 
 ====Translations====
-{{trans-top|to leave out or to not include|omit}}
+{{trans-see|to leave out or to not include|omit}}
 
 [[Category:English phrasal verbs]]
 [[Category:English phrasal verbs with particle (out)]]
