t+ie:[[sanguar]] ([[WT:EDIT|Assisted]]) <bleed#18761941>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -62,6 +62,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Hungarian: {{t+|hu|vérzik}}
 * Icelandic: {{qualifier|impersonal}} {{t-|is|blæða}}
 * Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
+* Interlingue: {{t|ie|sanguar}}
 * Irish: {{t-|ga|cuir fuil}}
 {{trans-mid}}
 * Italian: {{t+|it|sanguinare}}
