--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -59,7 +59,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Belarusian: {{t|be|бурбалка|f|tr=búrbalka|sc=Cyrl}}, {{t|be|пузыр|m|tr=puzýr|sc=Cyrl}}
 * {{trreq|bn}}
 * {{trreq|br}}
-* Bulgarian: {{t-|bg|мехурче|n}}
+* Bulgarian: {{t-|bg|мехурче|n|tr=mehurče}}
 * {{trreq|my}}
 * Catalan: {{t-|ca|bombolla|f}}
 * {{trreq|chr}}
@@ -96,7 +96,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|ia}}
 * {{trreq|ie}}
 * Italian: {{t+|it|bolla|f}}
-* Japanese: {{l|ja|泡}} ({{l|ja|あわ}}, ''awa''), {{l|ja|泡立つ}}, [[shabon]], {{t|ja|泡|tr=あわ, awa|sc=Jpan}}, {{t|ja|泡立つ|tr=あわだつ, awadatsu|sc=Jpan}}
+* Japanese: {{t|ja|泡|tr=あわ, awa|sc=Jpan}}, {{t|ja|泡立つ|tr=あわだつ, awadatsu|sc=Jpan}}
 * {{trreq|jv}}
 * {{trreq|kn}}
 * {{trreq|kk}}
@@ -134,7 +134,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|raj}}
 * Romanian: {{t+|ro|balon|n}}, {{t-|ro|bășică|f}}, {{t-|ro|bulă|f}}
 * {{trreq|rm}}
-* Russian: {{t+|ru|пузырь|m|tr=puzýr'}}
+* Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}
 * {{trreq|sc}}
 * {{trreq|sco}}
 * Scottish Gaelic: {{t|gd|builgean|f}}
@@ -171,7 +171,7 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-bottom}}
 
 {{trans-top|small spherical cavity in a solid}}
-* Bulgarian: {{t-|bg|мехурче|n}}
+* Bulgarian: {{t-|bg|мехурче|n|tr=mehurče}}
 * Catalan: {{t-|ca|bombolla|f}}
 * Dutch: {{t+|nl|bel|f}}
 * Finnish: {{t-|fi|kupla}}
@@ -183,12 +183,12 @@ Partly imitative, also influenced by {{term|burble}}.
 *: Sorani: {{t|ku|بڵق|sc=ku-Arab}}
 * Macedonian: {{t-|mk|меурче|n|tr=méurče}}
 * Portuguese: {{t+|pt|bolha|f}}
-* Russian: {{t+|ru|пузырёк|m}}
+* Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}, {{t+|ru|пузырёк|m|tr=puzyrjók}}
 * Telugu: {{t+|te|బుడగ|tr=buḍaga}}
 {{trans-bottom}}
 
 {{trans-top|anything resembling a hollow sphere}}
-* Bulgarian: {{t+|bg|мехур|m}}
+* Bulgarian: {{t+|bg|мехур|m|tr=mehur}}
 * Catalan: {{t-|ca|bombolla|f}}
 * Dutch: {{t+|nl|bel|f}}
 * Finnish: {{t-|fi|kupla}}
@@ -199,7 +199,7 @@ Partly imitative, also influenced by {{term|burble}}.
 *: Sorani: {{t|ku|بڵق|sc=ku-Arab}}
 * Macedonian: {{t-|mk|меур|m|tr=méur}}
 * Portuguese: {{t+|pt|bolha|f}}
-* Russian: {{t+|ru|пузырь|m|tr=puzýr'}}, {{t+|ru|пузырёк|m|tr=puzyr'ók}}
+* Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}, {{t+|ru|пузырёк|m|tr=puzyrjók}}
 * Telugu: {{t+|te|బుడగ|tr=buḍaga}}
 {{trans-bottom}}
 
@@ -214,7 +214,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{t+|ja|バブル|tr=baburu}}
-* Russian: {{t+|ru|пузырь|m|tr=(puzýr'|sc=Cyrl}}
+* Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}
 * Spanish: {{t+|es|burbuja|f}}
 * Telugu: {{t+|te|బుడగ|tr=buḍaga}}
 {{trans-bottom}}
