t+mk:[[предупредување]] ([[WT:EDIT|Assisted]]) <monition#18764542>

--- a/en/m/monition.720241.wikitext
+++ b/en/m/monition.720241.wikitext
@@ -25,6 +25,7 @@ From {{etyl|la}} {{term|monitio|monitiō|warning, admonition|lang=la}}.
 * Finnish: {{t+|fi|varoitus}}
 * German: {{t+|de|Mahnung|f}}
 {{trans-mid}}
+* Macedonian: {{t|mk|предупредување|n|tr=predupredúvanje|sc=Cyrl}}
 * Serbo-Croatian: {{t-|sh|savjet|m}}, {{t-|sh|opomena|f}}, {{t-|sh|upozorenje|n}}
 {{trans-bottom}}
 
