--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -70,6 +70,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Turkish: {{t+|tr|gelincik}}
 * Ukrainian: {{t-|uk|ласка|f|tr=láska|sc=Cyrl}}
 * Volapük: {{qualifier|♂♀}} {{t-|vo|visaf}}
+* Walloon: {{t|wa|marcote|f}}, {{t|wa|bascolete|f}}
 * West Frisian: {{t-|fy|wezeling|c}}
 {{trans-bottom}}
 
