--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -29,6 +29,7 @@ The verb comes from the supposed cunningness of the weasel.
 ====Translations====
 {{trans-top|least weasel, ''Mustela nivalis''}}
 * Algonquin: {{tø|alq|cigosi}}
+* Arabic: {{t|ar|ابن عرس|m|tr=ibn 3irs|alt=ابْن عِرْس|sc=Arab}}
 * Armenian: {{t-|hy|աքիս|tr=ak'is}}
 * Basque: {{t+|eu|erbinude}}
 * Belarusian: {{t-|be|ласка|f|tr=láska|sc=Cyrl}}
