t+ary:[[فارة الخيل]] ([[WT:EDIT|Assisted]]) <weasel#18765982>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -30,6 +30,7 @@ The verb comes from the supposed cunningness of the weasel.
 {{trans-top|least weasel, ''Mustela nivalis''}}
 * Algonquin: {{tø|alq|cigosi}}
 * Arabic: {{t|ar|ابن عرس|m|tr=ibn 3irs|alt=ابْن عِرْس|sc=Arab}}
+*: Moroccan Arabic: {{tø|ary|فارة الخيل|f|tr=farat el-khil}} {{qualifier|litt. horse-mouse}}
 * Armenian: {{t-|hy|աքիս|tr=ak'is}}
 * Basque: {{t+|eu|erbinude}}
 * Belarusian: {{t-|be|ласка|f|tr=láska|sc=Cyrl}}
