/* Middle Dutch */ <bet#18766764>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -201,6 +201,9 @@ From {{etyl|he}} {{term|בית|tr=béyt}}
 
 ==Middle Dutch==
 
+===Pronunciation===
+* {{IPA|lang=dum|/bet/}}
+
 ===Etymology 1===
 From {{etyl|odt|dum}} {{term|bit|lang=odt}}.{{rfe|Is this bi+met?|lang=dum}}
 
