--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -125,7 +125,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Tatar: {{t+|tt|тиен|tr=tien|sc=Cyrl}}
 * Telugu: [[ఉడుత]] (uDuta)
 * Thai: {{t+|th|กระรอก|tr=grà rôk|sc=Thai}}
-* Turkish: {{t+|tr|sincap}}
+* Turkish: {{t+|tr|sincap}}, {{t|tr|değin}}, {{t|tr|çekelez}}
 * Turkmen: {{t+|tk|awusiýdik}}, {{t-|tk|belka}}
 * Tuvan: {{tø|tyv|дииң|tr=diiñ|sc=Cyrl}}
 * Ukrainian: {{t+|uk|білка|f|tr=bílka}}
