--- a/en/p/palinspastic.776587.wikitext
+++ b/en/p/palinspastic.776587.wikitext
@@ -6,7 +6,7 @@ From {{etyl|grc}} {{term|sc=Grek|lang=el|πάλιν||again|tr=pálin}} + {{term|
 
 ===Pronunciation===
 
-* {{IPA|pælɪnˈspæstɪk}}
+* {{IPA|/pælɪnˈspæstɪk/}}
 * {{rhymes|æstɪk}}
 
 ===Adjective===
