/* Verb */ past of rot is rotted, not rotten <rot#18771393>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -11,7 +11,7 @@ From {{etyl|enm}} {{term|rotten|lang=enm}}, {{term|roten|lang=enm}}, from {{etyl
 * {{rhymes|ɒt}}
 
 ===Verb===
-{{en-verb|rots|rotting|rotted|rotten}}
+{{en-verb|rots|rotting|rotted|rotted}}
 
 # to [[decay]] or [[decompose]]; to become [[bad]]
 
