--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -46,16 +46,30 @@ From {{etyl|la|fr}} {{term|quattuordecim|lang=la}}.
 ----
 
 ==Guernésiais==
-
+{{cardinalbox|roa-grn|13|14|15|treize|tchinze}}
 ===Etymology===
 From {{etyl|la|roa-grn}} {{term|quattuordecim|lang=la}}.
 
 ===Numeral===
-{{cardinalbox|roa-grn|13|14|15|treize|tchinze}}
 {{head|roa-grn|numeral}}
 
 # [[fourteen]]
+
 [[Category:roa-grn:Cardinal numbers]]
+
+----
+
+==Jèrriais==
+{{cardinalbox|roa-jer|13|14|15|treize|tchînze}}
+===Etymology===
+From {{etyl|la|roa-jer}} {{term|quattuordecim|lang=la}}.
+
+===Numeral===
+{{head|roa-jer|numeral}}
+
+# [[fourteen]]
+
+[[Category:roa-jer:Cardinal numbers]]
 
 ----
 
