Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <Bosphorus#18784645>

--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -23,15 +23,14 @@
 *: Egyptian Arabic: {{tø|arz|البوسفور|sc=Arab}}
 * Aragonese: {{t-|an|Bosforo}}
 * Armenian: {{t-|hy|Բոսֆոր|tr=Bosfor}}
-* Asturian: [[Bósforo]] {{m}}, {{t-|ast|Bósforo}}
-* Azerbaijani: [[Bosfor Boğazı]]
+* Asturian: {{t|ast|Bósforo|m}}, {{t-|ast|Bósforo}}
+* Azerbaijani: {{t|az|Bosfor Boğazı}}
 * Bashkir: {{tø|ba|Босфор|tr=Bosfór|sc=Cyrl}}
 * Basque: {{t-|eu|Bosforo itsasartea}}
 * Belarusian: {{t-|be|Басфор|m|tr=Basfór|sc=Cyrl}}
-* Serbo-Croatian: [[Bosfor]] {{m}}
-* Breton: [[Bosfor]]
+* Breton: {{t|br|Bosfor}}
 * Bulgarian: {{t-|bg|Босфор|m|tr=Bosfor|sc=Cyrl}}
-* Catalan: [[Bòsfor]] {{m}}
+* Catalan: {{t|ca|Bòsfor|m}}
 * Chinese:
 *: Mandarin: {{t|cmn|博斯普魯斯海峽|sc=Hani}}, {{t|cmn|博斯普鲁斯海峡|tr=Bósīpǔlǔsī hǎixiá|sc=Hani}}
 * Chuvash: {{tø|cv|Босфор|sc=Cyrl}}
@@ -43,7 +42,7 @@
 * Extremaduran: {{tø|ext|Bósforu}}
 * Finnish: {{t+|fi|Bosporinsalmi}}
 * French: {{t+|fr|Bosphore|m}}
-* Galician: [[Bósforo]] {{m}}
+* Galician: {{t|gl|Bósforo|m}}
 * Georgian: {{t-|ka|ბოსფორი|tr=bosp‘ori}}
 * German: {{t+|de|Bosporus|m}}
 * Greek: {{t+|el|Βόσπορος|m|tr=Vósporos}}
@@ -51,7 +50,7 @@
 * Hindi: {{t-|hi|बोस्पोरुस जलसन्धि|tr=bosporus jalsandhi|sc=Deva}}
 * Hungarian: {{t+|hu|Boszporusz}}
 * Icelandic: {{t-|is|Bosporussund}}
-* Indonesian: [[Selat Bosporus]]
+* Indonesian: {{t|id|Selat Bosporus}}
 * Italian: {{t-|it|Bosforo|m}}
 * Japanese: {{t-|ja|ボスフォラス海峡|tr=Bosuporasu kaikyō|sc=Jpan}}
 {{trans-mid}}
@@ -61,29 +60,31 @@
 * Kurdish: {{t|ku|Tengava Stenbolê}}, {{t|ku|Bosfor}}
 * Latin: {{t-|la|Bosporus}}
 * Latvian: {{t-|lv|Bosfors}}
-* Lithuanian: [[Bosforo sąsiauris]], {{t-|lt|Bosforas}}
+* Lithuanian: {{t|lt|Bosforo sąsiauris}}, {{t-|lt|Bosforas}}
 * Low German: {{t-|nds|Bosporus}}
 * Luxembourgish: {{t-|lb|Bosporus}}
 * Macedonian: {{t-|mk|Босфор|m|tr=Bósfor}}
 * Norwegian: {{t-|no|Bosporos}}
-* Occitan: [[Bosfòr]] {{m}}
+* Occitan: {{t|oc|Bosfòr|m}}
 * Old English: {{t-|ang|Bosporos}}
 * Persian: {{t-|fa|تنگه بسفر|tr=tanga Bosfor|sc=fa-Arab}}
 * Polish: {{t+|pl|Bosfor|m}}
 * Portuguese: {{t-|pt|Bósforo|m}}
-* Romanian: [[Bosfor]]
+* Romanian: {{t|ro|Bosfor}}
 * Russian: {{t-|ru|Босфор|m|tr=Bosfór|sc=Cyrl}}
-* Serbo-Croatian: [[Босфор]] ([[Bosfor]]) {{m}}, {{t-|sh|Bosfor|m}}, {{t-|sh|Босфор|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|Босфор|m|sc=Cyrl}}
+*: Roman: {{t-|sh|Bosfor|m}}
 * Sicilian: {{t-|scn|Bosfuru}}
 * Slovene: {{t+|sl|Bospor|m}}
 * Spanish: {{t-|es|Bósforo|m}}
 * Swahili: {{t-|sw|Bosporus}}
-* Swedish: [[Bosporen]]
+* Swedish: {{t|sv|Bosporen}}
 * Tatar: {{t-|tt|Босфор бугазы|tr=Bosfor bugazy|sc=Cyrl}}, {{t-|tt|Истанбул бугазы|tr=Istanbul bugazy|sc=Cyrl}}
 * Thai: {{t-|th|ช่องแคบบอสฟอรัส|sc=Thai}}
 * Turkish: {{t+|tr|İstanbul Boğazı}}
 * Ukrainian: {{t-|uk|Босфор|m|tr=Bosfór|sc=Cyrl}}
-* Urdu: {{ur-Arab|[[آبنائے باسفورس]]}}
+* Urdu: {{t|ur|آبنائے باسفورس|sc=ur-Arab}}
 * Uyghur: {{t-|ug|ئىستانبۇل بوغازى|sc=ug-Arab}}
 * Vietnamese: {{t-|vi|eo biển Bosporus}}, {{t-|vi|eo biển Bospho}}
 * Welsh: {{t-|cy|Bosphorus}}
