switch to specif. Seeltersk word, because frs is ambiguous: it's used here for Frisian, but may have been intended by SIL/ISO to a kind of Low German using [[Project:AWB|AWB]] <quack#18830703>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -6,7 +6,7 @@
 * {{rhymes|æk}}
 
 ===Etymology 1===
-From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a frog; make a noise like a duck, goose, or quail|lang=enm}}, from {{term|quack|lang=enm}}, {{term|qwacke|lang=enm}}, {{term|quek|lang=enm}}, {{term|queke||quack|pos=interjection and noun|lang=enm}}, also {{term|kek|lang=enm}}, {{term|keke|lang=enm}}, {{term|whec-|lang=enm}}, partly of imitative origin and partly from {{etyl|dum}} {{term|quacken||to croak, quack|lang=dum}}, from {{etyl|odt}} *{{term||kwaken|to croak, quack|lang=odt}}, from {{etyl|gem-pro|en}} {{recons|kwakanan|lang=gem-pro}}, {{recons|kwakōnan||to croak|lang=gem-pro}}, of imitative origin.<ref>Robert E. Lewis, ''Middle English dictionary, Volume 8'', queke.</ref> Cognate with {{etyl|frs|-}} {{term|kwaakje||to quack, croak|lang=frs}}, {{etyl|gml|-}} {{term|quaken||to quack, croak|lang=gml}}, {{etyl|de|-}} {{term|quaken||to quack, croak|lang=de}}, {{etyl|da|-}} {{term|kvække||to croak|lang=da}}, {{etyl|sv|-}} {{term|kväka||to croak, quackle|lang=sv}}, {{etyl|no|-}} {{term|kvekke||to croak|lang=no}}, {{etyl|is|-}} {{term|kvaka||to twitter, chirp|lang=is}}.
+From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a frog; make a noise like a duck, goose, or quail|lang=enm}}, from {{term|quack|lang=enm}}, {{term|qwacke|lang=enm}}, {{term|quek|lang=enm}}, {{term|queke||quack|pos=interjection and noun|lang=enm}}, also {{term|kek|lang=enm}}, {{term|keke|lang=enm}}, {{term|whec-|lang=enm}}, partly of imitative origin and partly from {{etyl|dum}} {{term|quacken||to croak, quack|lang=dum}}, from {{etyl|odt}} *{{term||kwaken|to croak, quack|lang=odt}}, from {{etyl|gem-pro|en}} {{recons|kwakanan|lang=gem-pro}}, {{recons|kwakōnan||to croak|lang=gem-pro}}, of imitative origin.<ref>Robert E. Lewis, ''Middle English dictionary, Volume 8'', queke.</ref> Cognate with {{etyl|stq|-}} {{term|kwoakje|lang=stq}}, {{etyl|gml|-}} {{term|quaken||to quack, croak|lang=gml}}, {{etyl|de|-}} {{term|quaken||to quack, croak|lang=de}}, {{etyl|da|-}} {{term|kvække||to croak|lang=da}}, {{etyl|sv|-}} {{term|kväka||to croak, quackle|lang=sv}}, {{etyl|no|-}} {{term|kvekke||to croak|lang=no}}, {{etyl|is|-}} {{term|kvaka||to twitter, chirp|lang=is}}.
 
 ====Noun====
 {{en-noun}}
@@ -27,7 +27,7 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 * Greek: {{t-|el|πα πα}} (pa pa)
 * Hungarian: {{t-|hu|háp}}
 {{trans-mid}}
-* Icelandic: {{t-|is|andagagg|n}},  {{t-|is|guss|n}}
+* Icelandic: {{t-|is|andagagg|n}}, {{t-|is|guss|n}}
 * Italian: [[qua qua]] {{m}}
 * Japanese: {{t-|ja|ガー ガー|tr=gā-gā}}, {{t-|ja|クェッ クェッ|tr=quek-quek}}, {{t-|ja|クワッ クワッ|tr=quwak-quwak}}
 * Macedonian: {{t-|mk|квак|tr=kvák}}
@@ -58,7 +58,7 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 * French: {{t+|fr|cancaner}}
 * German: {{t+|de|quaken}}
 * Hungarian: {{t-|hu|hápog}}
-* Icelandic: {{t-|is|gagga}},  {{t-|is|gussa}}
+* Icelandic: {{t-|is|gagga}}, {{t-|is|gussa}}
 * Interlingua: [[quaccar]]
 {{trans-mid}}
 * Italian: [[fare]] [[qua qua]]
@@ -88,7 +88,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 #*: After ſome Months, the '''Quack''' gets privately to Town, [...]
 #* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
 #*: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
-# A [[charlatan]]. <!-- #:''What a '''quack''' he is, saying that's an organic [[Viagra]]™ !'' -->
+# A [[charlatan]]. <!-- #:''What a '''quack''' he is, saying that's an organic [[Viagra]]!'' -->
 # {{slang}} A [[doctor]].
 
 =====Synonyms=====
@@ -124,7 +124,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 * French: {{t+|fr|charlatan|m}}
 * German: {{t+|de|Quacksalber|m}}
 * Greek: {{t+|el|τσαρλατάνος|m}} (tsarlatános)
-* Icelandic: {{t+|is|fúskari|m}},  {{t+|is|loddari|m}},  {{t-|is|falsari|m}},  {{t-|is|svikari|m}}
+* Icelandic: {{t+|is|fúskari|m}}, {{t+|is|loddari|m}}, {{t-|is|falsari|m}}, {{t-|is|svikari|m}}
 {{trans-mid}}
 * Italian: {{t+|it|ciarlatano|m}}, {{t-|it|imbonitore|m}}, {{t-|it|pataccaro|m}}
 * Japanese: {{t-|ja|ペテン師|tr=peten-shi}}
@@ -170,7 +170,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 
 =====Translations=====
 {{trans-top|falsely presented as having medicinal powers}}
-* Icelandic: {{t-|is|svika-}},  {{t-|is|fals-}},  {{t-|is|skottu-}}
+* Icelandic: {{t-|is|svika-}}, {{t-|is|fals-}}, {{t-|is|skottu-}}
 {{trans-mid}}
 * Italian: {{t+|it|empirico}}
 {{trans-bottom}}
