--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -15,9 +15,8 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 ===Noun===
 {{en-noun}}
 
-# Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
-# {{Scientology|often|disparaging}} A person, usually a [[freezoner]], who applies L. Ron Hubbard's technology in a [[heterodox]] manner.
-
+# Sabian Wagner 
+#
 ====Derived terms====
 * [[gray squirrel]]
 * [[red squirrel]]
