Reverted edits by [[Special:Contributions/Jaidecaprilishus|Jaidecaprilishus]], restoring last version by [[User:Dilyâresi|Dilyâresi]]. If you think this rollback is in error, please leave a message on my talkpage. <squirrel#18844119>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -15,8 +15,9 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 ===Noun===
 {{en-noun}}
 
-# Sabian Wagner 
-#
+# Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
+# {{Scientology|often|disparaging}} A person, usually a [[freezoner]], who applies L. Ron Hubbard's technology in a [[heterodox]] manner.
+
 ====Derived terms====
 * [[gray squirrel]]
 * [[red squirrel]]
