--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -40,15 +40,17 @@ See [[bind]]
 {{trans-top|obliged to}}
 * Bulgarian: {{t+|bg|задължен}}
 * Dutch: {{t+|nl|gehouden}}
-{{trans-mid}}
 * French: {{t+|fr|obligé}}, {{t+|fr|tenu}}
+{{trans-mid}}
 * Italian: {{t-|it|obbligato|m}}, {{t+|it|confinato|m}}, {{t-|it|tenuto|m}}
+* Russian: {{t|ru|обязанный|tr=objazánnyj|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|very likely to}}
 * Bulgarian: {{t+|bg|решен}},  {{t-|bg|готов да}}
-{{trans-mid}}
 * Dutch: {{t+|nl|geacht}}
+{{trans-mid}}
+* Russian: {{t|ru|непременный|tr=nepreménnyj|sc=Cyrl}}
 {{trans-bottom}}
 
 ===Etymology 2===
@@ -90,6 +92,7 @@ From {{etyl|enm}} {{term|bounde}}, from {{etyl|fro}} {{term|bunne}}, from {{etyl
 * German: {{t+|de|Abgrenzung|f}}, [[Grenz]]
 * Italian: {{t+|it|frontiera|f}}, {{t+|it|confine|m}}
 * Polish: {{t+|pl|granica|f}}
+* Russian: {{t|ru|граница|f|tr=graníca|sc=Cyrl}}, {{t|ru|предел|m|tr=predél|sc=Cyrl}}
 * Spanish: {{t+|es|límite}}
 * Swedish: {{t+|sv|gräns|c}}
 {{trans-bottom}}
@@ -133,9 +136,10 @@ From {{etyl|enm}} {{term|bounde}}, from {{etyl|fro}} {{term|bunne}}, from {{etyl
 * Dutch: {{t+|nl|begrenzen}}, {{t+|nl|omringen}}
 * Estonian: {{t-|et|tõkestama}}
 * Finnish: {{t-|fi|reunustaa}}
-{{trans-mid}}
 * French: {{t+|fr|délimiter}}, {{t+|fr|entourer}}
+{{trans-mid}}
 * Italian: {{t+|it|confinare}}, {{t+|it|accerchiare}}, {{t-|it|delimitare}}
+* Russian: {{t|ru|ограничивать|tr=ograníčivatʹ|sc=Cyrl}}
 * Spanish: {{t+|es|limitar}}
 * Swedish: {{t-|sv|gränsa till}}
 {{trans-bottom}}
@@ -166,6 +170,7 @@ From {{etyl|fr}} {{term|bondir||to leap, bound, originally make a loud resoundin
 {{trans-mid}}
 * German: {{t+|de|Sprung|m}}
 * Italian: {{t+|it|salto|m}}, {{t-|it|balzo|m}}
+* Russian: {{t|ru|прыжок|m|tr=pryžók|sc=Cyrl}}, {{t|ru|скачок|m|tr=skačók|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|leum|m|xs=Scottish Gaelic}}
 * Swedish: {{t+|sv|hopp|n}}, {{t+|sv|skutt|n}}
 {{trans-bottom}}
@@ -214,8 +219,10 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 {{trans-top|ready, prepared}}
 * Bulgarian: {{t+|bg|готов}}
 * Dutch: {{t+|nl|bereid}}
+* German: {{t|de|bereit}}
 {{trans-mid}}
 * Italian: {{t-|it|destinato}}
+* Russian: {{t|ru|готовый|tr=gotóvyj|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|ready to start or go (to); moving in the direction (of)}}
@@ -224,14 +231,16 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 * Italian: {{t-|it|diretto}}, {{t-|it|incamminato}}
 {{trans-mid}}
 * Japanese: {{t-|ja|行き|tr=... yuki no|alt=…行きの|sc=Jpan}}, {{t-|ja|向かう|tr=... ni mukatte|alt=…に向かって|sc=Jpan}}
+* Russian: {{t|ru|направляться|tr=napravljájuščijsja|alt=направляющийся|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|constrained by something, or constrained to something}}
 * Bulgarian: {{t+|bg|свързан}},  {{t+|bg|обвързан}}
 * Danish: {{t-|da|begrænset}}
-{{trans-mid}}
 * Finnish: [[sidottu]]
+{{trans-mid}}
 * Italian: {{t-|it|obbligato}}, {{t-|it|costretto}}
+* Russian: {{t|ru|связанный|tr=svjázannyj|sc=Cyrl}}, {{t|ru|обязанный|tr=objazánnyj|sc=Cyrl}}
 {{trans-bottom}}
 
 ====Statistics====
