--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -43,7 +43,7 @@ See [[bind]]
 * French: {{t+|fr|obligé}}, {{t+|fr|tenu}}
 {{trans-mid}}
 * Italian: {{t-|it|obbligato|m}}, {{t+|it|confinato|m}}, {{t-|it|tenuto|m}}
-* Russian: {{t|ru|обязанный|tr=objazánnyj|sc=Cyrl}}
+* Russian: {{t|ru|обязанный|tr=objazánnyj|sc=Cyrl}}, {{t|ru|должный|tr=dólzhnyj|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|very likely to}}
