--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -219,7 +219,7 @@ From {{etyl|ru|es}} {{term|водка|lang=ru|tr=vódka|lit=little water}}, a di
 
 # [[#English|vodka]]
 
-[[Category:es:Alcoholic beverages]] Russia is the best
+[[Category:es:Alcoholic beverages]]
 
 [[ar:vodka]]
 [[cs:vodka]]
