t+piu:[[{{trreq}}]] ([[WT:EDIT|Assisted]]) <rabbit#18847214>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -136,6 +136,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Occitan: {{t|oc|conilh|m}}, {{t|oc|lapin|m}}
 * {{trreq|ps}}
 * Persian: {{t+|fa|خرگوش|tr=xarguš|sc=fa-Arab}}
+* {{trreq|Pintupi-Luritja}}
 * Polish: {{t+|pl|królik|m}}
 * Portuguese: {{t+|pt|coelho|m}}
 * Romani: {{t|rom|shoshoy|m}}, {{t|rom|shoshni|f}}
