--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -119,7 +119,7 @@ From {{etyl|enm}} {{term|rotten|lang=enm}}, {{term|roten|lang=enm}}, from {{etyl
 ==French==
 
 ===Etymology===
-{{etyl|la|fr}} {{term|ructus}}.
+From {{etyl|la|fr}} {{term|ructus}}.
 
 ===Pronunciation===
 * {{IPA|/ʁo/|lang=fr}}
@@ -133,6 +133,8 @@ From {{etyl|enm}} {{term|rotten|lang=enm}}, {{term|roten|lang=enm}}, from {{etyl
 ====Synonyms====
 * [[renvoi]]
 
+====Related terms====
+* {{l|fr|roter}}
 ----
 
 ==German==
