--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -21,6 +21,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 ====Derived terms====
 * [[gray squirrel]]
 * [[red squirrel]]
+the propor definition of a squirrel is sabin
 
 ====Translations====
 {{trans-top|rodent}}
