--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 From {{etyl|fr|en}} {{term|mouflon|lang=fr}}, from {{etyl|it|-}} {{term|muflone|lang=it}}, from {{etyl|LL.|-}} {{term|mufro|mufrō|wild sheep|lang=la}}, related to {{etyl|la|-}} {{term|musimo||wild sheep|lang=la}}, both probably of pre-Latin origin. From 1765-75.
 
+===Alternative foms===
+* [[moufflon]]
+
 ===Pronunciation===
 * {{IPA|/ˈmuf.lɔn/}}
 
