--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -98,6 +98,7 @@ To ask for an object, use ''[[quan]]'' instead.
 ===Pronunciation===
 * {{IPA|/kwa/|lang=it}}
 * {{audio|It-qua.ogg|Audio}}
+* {{rhymes|a|lang=it}}
 
 ===Adverb===
 {{it-adv}}
