--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -119,6 +119,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Irish: {{t+|ga|muc|f}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
 * Japanese: {{t+|ja|豚|tr=[[ぶた]], buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|couochon|m}}, {{tø|roa-jer|bête à saie|f}}, {{tø|roa-jer|por|m}}, {{tø|roa-jer|gronneux|m}}, {{tø|roa-jer|moussieu|m}}, {{tø|roa-jer|quétot|m}}
 * Kannada: {{t+|kn|ಹಂದಿ|tr=handi|sc=Knda}}
 * Karelian: {{tø|krl|počči}}
 * Kazakh: {{t|kk|шошқа|tr=şoşqa|sc=Cyrl}}
