--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -25,6 +25,7 @@ From {{etyl|fr}} {{term|quadrupède|lang=fr}}, from {{etyl|frm}}, from {{etyl|la
 * Russian: {{t|ru|четвероногий|n|tr=četveronógoje|alt=четвероногое|sc=Cyrl}} {{qualifier|живо́тное}}
 * Spanish: {{t-|es|cuadrúpedo|m}}
 * Telugu: {{t+|te|చతుష్పదము|tr=chatush-padamu}}
+* Tocharian B: {{t|txb|śwerppewä}}
 * Volapük: {{qualifier|male or female}} {{t+|vo|folfutaf}}, {{qualifier|male}} {{t-|vo|hifolfutaf}}, {{qualifier|female}} {{t-|vo|jifolfutaf}}, {{qualifier|male or female}} {{t+|vo|follögaf}}, {{qualifier|male}} {{t-|vo|hifollögaf}}, {{qualifier|female}} {{t-|vo|jifollögaf}}
 {{trans-bottom}}
 
