--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -11,6 +11,7 @@
 * Danish: {{t-|da|ligurisk}}
 {{trans-mid}}
 * Italian: {{t+|it|ligure}}
+* {{trreq|Ligurian}}
 * Russian: {{t-|ru|лигурский|sc=Cyrl}}
 {{trans-bottom}}
 
@@ -24,6 +25,7 @@
 {{trans-top|native or inhabitant}}
 * Italian: {{t+|it|ligure|m|f}}
 {{trans-mid}}
+* {{trreq|Ligurian}}
 {{trans-bottom}}
 
 [[et:Ligurian]]
