--- a/en/e/evaluative.855671.wikitext
+++ b/en/e/evaluative.855671.wikitext
@@ -1,9 +1,11 @@
 ==English==
 
 ===Etymology===
-[[evaluate]] + [[-ive]]
+{{suffix|evaluate|ive}}
+
 ===Adjective===
 {{en-adj}}
+
 # Relating to the assignment of value to a person, thing, or event.
 # [[judgmental]]; [[tending]] to [[reduce]] a thing to a simple [[evaluation]].
 
