--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -9,6 +9,7 @@
 {{trans-top|Of or pertaining to Liguria}}
 * Czech: {{t-|cs|ligurský}}
 * Danish: {{t-|da|ligurisk}}
+* {{trreq|French}}
 {{trans-mid}}
 * Italian: {{t+|it|ligure}}
 * {{trreq|Ligurian}}
