/* Translations */ fi; edited transl tables to correspond with defns, had to make lots of ttbc's in the process <thing#18883254>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -78,154 +78,60 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 * ''diminutives:'' [[thingy]] / [[thingie]], [[thingo]] [''Aus'']
 
 ====Translations====
-{{trans-top|a separate entity or concept}}
-* Afrikaans: {{t-|af|ding}}
+{{trans-top|that which is considered to exist as a separate entity, object, quality or concept}}
 * Albanian: {{t+|sq|send|m}}
-* Amharic: {{t-|am|ነገር|tr=nägär|sc=Ethi}}
 * Arabic: {{t+|ar|شيء|m|tr=shay'|sc=Arab}}
-*: Egyptian Arabic: {{tø|arz|حاجة|f|tr=Haaga|sc=Arab}}
 * Armenian: {{t-|hy|իր|tr=ir}}, {{t+|hy|բան|tr=ban}}
-* Aromanian: {{t-|rup|lucru}}
 * Asturian: {{t-|ast|cosa|f}}
 * Basque: {{t-|eu|gauza}}
 * Belarusian: {{t-|be|рэч|f|tr=reč}}
-* Bengali: {{t-|bn|বস্তু|sc=Beng}}
 * Berber:
 *: Tashelhit: {{tø|shi|taɣawsa|f|tr=taghawsa}}
-* Breton: {{t+|br|tra|f}}
-* Bulgarian: {{t+|bg|нещо|tr=nešto|n}}, {{t+|bg|предмет|tr=predmet|m}}, {{t+|bg|вещ|tr=vešt|f}}
-* Catalan: {{t+|ca|cosa|f}}
 * Chinese:
 *: Cantonese: {{tø|yue|東西}}, {{tø|yue|东西|tr=dung1 sai1}}, {{tø|yue|物|tr=mat6}}, {{tø|yue|事物|tr=si6 mat6}}
 *: Mandarin: {{t|cmn|東西|sc=Hani}}, {{t|cmn|东西|tr=dōngxi|sc=Hani}}, {{t|cmn|物|tr=wù|sc=Hani}}, {{t|cmn|事物|tr=shìwù|sc=Hani}}
 * Czech: {{t+|cs|věc|f}}
-* Dalmatian: {{tø|dlm|causa|f}}
 * Danish: {{t+|da|ting|c}}
 * Dutch: {{t+|nl|ding|n}}
-* Esperanto: {{t-|eo|aĵo}}, {{t-|eo|afero}}
+* Esperanto: {{t-|eo|aĵo}}
 * Estonian: {{t+|et|asi}}, {{t-|et|ese}}
-* Finnish: {{t+|fi|asia}}
+* Finnish: {{t|fi|asia}}, {{t|fi|esine}}
 * French: {{t+|fr|chose|f}}, {{t+|fr|truc|m}}, {{t+|fr|machin|m}} {{qualifier|informal}}
 * Galician: {{t+|gl|cousa|f}}
-* Georgian: {{t-|ka|ნივთი|tr=nivt‘i}}, {{t-|ka|საგანი|tr=sagani}}
 * German: {{t+|de|Ding|n}}
 * Greek: {{t+|el|πράγμα|n|tr=prágma}}
 * Guaraní: {{t+|gn|mba'e}}
 * Gujarati: {{t-|gu|વસ્તુ|tr=vastu}}
-* Haitian Creole: {{tø|ht|bagay}}
-* Hawaiian: {{tø|haw|mea}}
 * Hebrew: {{t+|he|דבר|m|tr=davar|sc=Hebr}}
 * Hindi: {{t-|hi|वस्तू|m|tr=vastū|sc=Deva}}, {{t+|hi|चीज़|f|tr=cīz|sc=Deva}}
 * Hungarian: {{t+|hu|dolog}}
-* Icelandic: {{t+|is|hlutur|m}}
 * Ido: {{t+|io|kozo}}
 * Indonesian: {{t+|id|benda}}, {{t+|id|barang}}, {{t+|id|makhluk}}
 * Interlingua: {{t-|ia|cosa}}
+{{trans-mid}}
 * Irish: {{t-|ga|rud|m}}, {{t-|ga|ní|m}}
 * Italian: {{t+|it|cosa|f}}
-{{trans-mid}}
-* Japanese: {{t+|ja|物|tr=[[もの]], mono|sc=Jpan}}, {{t+|ja|事|tr=[[こと]], koto|sc=Jpan}}
-* Javanese: {{t-|jv|barang}}
+* Japanese: {{t+|ja|物|tr=[[もの]], mono|sc=Jpan}}
 * Korean: {{t+|ko|물건|tr=mulgeon|sc=Kore}}
-* Kurdish:
-*: Sorani: {{t|ku|شت|tr=shit|sc=ku-Arab}}
 * Latin: {{t+|la|res|f|alt=rēs}}, {{t+|la|ens|n}}
-* Latvian: {{t+|lv|lieta|f}}
-* Lithuanian: {{t-|lt|dalykas|m}}, {{t+|lt|daiktas|m}}
+* Latvian: {{t+|lv|lieta}}
+* Lithuanian: {{t+|lt|daiktas|m}}, {{t-|lt|dalykas|m}}
 * Macedonian: {{t-|mk|нешто|n|tr=néšto}}, {{t|mk|ствар|f|tr=stvar|sc=Cyrl}}
 * Malagasy: {{t+|mg|zavatra}}
-* Maltese: {{t-|mt|ħaġa}}
 * Marathi: {{t-|mr|वस्तु|tr=vastu}}
-* Mongolian: {{t-|mn|юм|sc=Cyrl}}
 * Norwegian: {{t+|no|ting|m}}, {{t-|no|dings|m}}, {{t+|no|greie|f}}
-* Occitan: {{t+|oc|causa|f}}
 * Old English: {{t-|ang|þing|n}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
 * Polish: {{t+|pl|rzecz|f}}
 * Portuguese: {{t+|pt|coisa|f}}
-* Punjabi: {{t-|pa|ਸ਼ੈ|tr=šai}}
-* Romanian: {{t-|ro|lucru|n}}, {{t-|ro|chestie}}
+* Romanian: {{t-|ro|lucru|n}}
 * Russian: {{t+|ru|вещь|f|tr=vešč’|sc=Cyrl}}
 * Sanskrit: {{t-|sa|वस्तु|m|tr=vastu}}
 * Scottish Gaelic: {{t-|gd|rud|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|ствар|f}}
 *: Roman: {{t-|sh|stvar|f}}
-* Slovak: {{t-|sk|vec|f}}
 * Slovene: {{t+|sl|stvar|f}}, {{t-|sl|reč|f}}
-* Spanish: {{t+|es|cosa|f}}
-* Swahili: {{t+|sw|kitu}}, {{t+|sw|vitu}} ''pl (noun 7/8)''
-* Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}, {{t+|sv|grej|c}}
-* Telugu: {{t+|te|వస్తువు|tr=vastuvu}}
-* Thai: {{t-|th|สิ่งของ|tr=sìng kŏng}}, {{t+|th|สิ่ง|tr=sìng}}
-* Tigrinya: {{t-|ti|ነገር|tr=negerɨ|sc=Ethi}}
-* Tupinambá: {{tø|tpn|mba'e}}
-* Turkish: {{t+|tr|şey}}
-* Ukrainian: {{t-|uk|річ|f|tr=rič|sc=Cyrl}}
-* Urdu: {{t-|ur|وستو|m|tr=vastū|sc=ur-Arab}}, {{t+|ur|چیز|f|tr=cīz|sc=ur-Arab}}
-* Vietnamese: {{t+|vi|vật}}, {{t+|vi|điều}}
-* Welsh: {{t+|cy|peth|m}}
-* West Frisian: {{t-|fy|ding|n}}
-* Yiddish: {{t-|yi|זאַך|tr=zakh|f}}, {{t-|yi|חפֿץ|tr=kheyfets|m}}
-{{trans-bottom}}
-
-{{trans-top|any physical or psychical entity}}
-* Albanian: {{t+|sq|send}}
-* Arabic: {{t+|ar|شيء|m|tr=shay'|sc=Arab}}
-* Armenian: {{t-|hy|իր|tr=ir}}, {{t+|hy|բան|tr=ban}}
-* Asturian: {{t-|ast|cosa|f}}
-* Basque: {{t-|eu|gauza}}
-* Belarusian: {{t-|be|рэч|f|tr=reč}}
-* Berber:
-*: Tashelhit: {{tø|shi|taɣawsa|f|tr=taghawsa}}
-* Chinese:
-*: Cantonese: {{tø|yue|東西}}, {{tø|yue|东西|tr=dung1 sai1}}, {{tø|yue|物|tr=mat6}}, {{tø|yue|事物|tr=si6 mat6}}
-*: Mandarin: {{t|cmn|東西|sc=Hani}}, {{t|cmn|东西|tr=dōngxi|sc=Hani}}, {{t|cmn|物|tr=wù|sc=Hani}}, {{t|cmn|事物|tr=shìwù|sc=Hani}}
-* Czech: {{t+|cs|věc}}, {{t+|cs|předmět}}
-* Danish: {{t+|da|ting|c}}
-* Dutch: {{t+|nl|ding|n}}
-* Esperanto: {{t-|eo|aĵo}}
-* Estonian: {{t+|et|asi}}, {{t-|et|ese}}
-* Finnish: {{t+|fi|asia}}
-* French: {{t+|fr|chose|f}}, {{t+|fr|truc|m}}, {{t+|fr|machin|m}} {{qualifier|informal}}
-* Galician: {{t+|gl|cousa|f}}
-* German: {{t+|de|Ding|n}}
-* Greek: {{t+|el|πράγμα|n|tr=prágma}}, {{t+|el|πλάσμα|n|tr=plasma}}, {{t+|el|υποκείμενο|n|tr=ipokimeno}}
-* Guaraní: {{t+|gn|mba'e}}
-* Gujarati: {{t-|gu|વસ્તુ|tr=vastu}}
-* Hebrew: {{t+|he|דבר|m|tr=davar|sc=Hebr}}
-* Hindi: {{t-|hi|वस्तू|m|tr=vastū|sc=Deva}}, {{t+|hi|चीज़|f|tr=cīz|sc=Deva}}
-* Hungarian: {{t+|hu|dolog}}
-* Ido: {{t+|io|kozo}}
-* Indonesian: {{t+|id|benda}}, {{t+|id|barang}}, {{t+|id|makhluk}}
-* Interlingua: {{t-|ia|cosa}}
-* Inuktitut: {{t|iu|ᐱ}}
-* Irish: {{t-|ga|rud|m}}, {{t-|ga|ní|m}}
-* Italian: {{t+|it|cosa|f}}
-* Japanese: {{t+|ja|物|tr=[[もの]], mono|sc=Jpan}}
-* Korean: {{t+|ko|물건|tr=mulgeon|sc=Kore}}
-{{trans-mid}}
-* Latin: {{t+|la|res|f|alt=rēs}}, {{t+|la|ens|n}}
-* Latvian: {{t+|lv|lieta}}
-* Lithuanian: {{t+|lt|daiktas|m}}, {{t-|lt|dalykas|m}}
-* Luhya: {{tø|luy|sindu}}
-* Macedonian: {{t-|mk|нешто|n|tr=néšto}}, {{t|mk|ствар|f|tr=stvar|sc=Cyrl}}
-* Malagasy: {{t+|mg|zavatra}}
-* Marathi: {{t-|mr|वस्तु|tr=vastu}}
-* Norwegian: {{t+|no|ting}}, {{t-|no|dings}}, {{t+|no|greie|m}}
-* Old English: {{t-|ang|þing|n}}
-* Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
-* Polish: {{t+|pl|rzecz|f}}
-* Portuguese: {{t+|pt|coisa|f}}
-* Romanian: {{t-|ro|lucru|n}}
-* Russian: {{t+|ru|вещь|f|tr=vešč’|sc=Cyrl}}, {{t+|ru|предмет|m|tr=predmét|sc=Cyrl}}
-* Sanskrit: {{t-|sa|वस्तु|m|tr=vastu}}
-* Scottish Gaelic: {{t-|gd|rud|m}}
-* Serbo-Croatian:
-*: Cyrillic: {{t-|sh|ствар|f}}
-*: Roman: {{t-|sh|stvar|f}}
-* Slovene: {{t+|sl|stvar|f}}, {{t-|sl|reč|f}}
-* Southern Amami-Oshima: {{tø|ams|むん|tr=mun}}
 * Spanish: {{t+|es|cosa|f}}
 * Swahili: {{t+|sw|kitu}}, {{t+|sw|vitu}} ''pl (noun 7/8)''
 * Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
@@ -235,16 +141,111 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 * Ukrainian: {{t-|uk|річ|f|tr=rič|sc=Cyrl}}
 * Urdu: {{t-|ur|وستو|m|tr=vastū|sc=ur-Arab}}, {{t+|ur|چیز|f|tr=cīz|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|vật}}, {{t+|vi|điều}}
-* Volapük: {{t+|vo|din}}
 * Welsh: {{t+|cy|peth|m}}
 * West Frisian: {{t-|fy|ding|n}}
 {{trans-bottom}}
 
-{{trans-see|an assembly|Thing}}
+{{trans-top|word, symbol, sign, or other referent that can be used to refer to any entity}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|individual object or distinct entity}}
+* Finnish: {{t|fi|esine}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|law: whatever can be owned}}
+* Finnish: {{t|fi|esine}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|latest fad or fashion}}
+* Finnish: {{t|fi|juttu}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|clothes, possessions or equipment}}
+* Finnish: {{t|fi|kamat|p}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|unit or container, usually containing edible goods}}
+* Finnish: {{t|fi|pakkaus}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|problem, dilemma, or complicating factor}}
+* Finnish: {{t|fi|pulma}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|penis}}
+* Finnish: {{t|fi|kalu}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|living being or creature}}
+* Finnish: {{t|fi|olento}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|that which matters; the crux}}
+* Finnish: {{t|fi|olennainen}} {{qualifier|adjective}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|situation surrounding a noun's referent}}
+* Finnish: {{t|fi|juttu}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|historical: public assembly or judicial council}}
+* Finnish: {{t|fi|käräjät|p}}
+{{trans-mid}}
+{{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|ka}}: {{t-|ka|ფაქტი|tr=p'ak'ti}}
+* {{ttbc|Afrikaans}}: {{t-|af|ding}}
+* {{ttbc|Amharic}}: {{t-|am|ነገር|tr=nägär|sc=Ethi}}
+* {{ttbc|Arabic}}:
+*: Egyptian Arabic: {{tø|arz|حاجة|f|tr=Haaga|sc=Arab}}
+* {{ttbc|Aromanian}}: {{t-|rup|lucru}}
+* {{ttbc|Asturian}}: {{t-|ast|cosa|f}}
+* {{ttbc|Bengali}}: {{t-|bn|বস্তু|sc=Beng}}
+* {{ttbc|Breton}}: {{t+|br|tra|f}}
+* {{ttbc|Bulgarian}}: {{t+|bg|нещо|tr=nešto|n}}, {{t+|bg|предмет|tr=predmet|m}}, {{t+|bg|вещ|tr=vešt|f}}
+* {{ttbc|Catalan}}: {{t+|ca|cosa|f}}
+* {{ttbc|Czech}}: {{t+|cs|předmět}}
+* {{ttbc|Dalmatian}}: {{tø|dlm|causa|f}}
+* {{ttbc|Esperanto}}: {{t-|eo|afero}}
+* {{ttbc|Georgian}}: {{t-|ka|ნივთი|tr=nivt‘i}}, {{t-|ka|საგანი|tr=sagani}}, {{t-|ka|ფაქტი|tr=p'ak'ti}}
+* {{ttbc|Greek}}: {{t+|el|πλάσμα|n|tr=plasma}}, {{t+|el|υποκείμενο|n|tr=ipokimeno}}
+* {{ttbc|Haitian Creole}}: {{tø|ht|bagay}}
+* {{ttbc|Hawaiian}}: {{tø|haw|mea}}
+* {{ttbc|Icelandic}}: {{t+|is|hlutur|m}}
+* {{ttbc|Indonesian}}: {{t+|id|benda}}, {{t+|id|barang}}, {{t+|id|makhluk}}
+* {{ttbc|Inuktitut}}: {{t|iu|ᐱ}}
+{{trans-mid}}
+* {{ttbc|Japanese}}: {{t+|ja|事|tr=[[こと]], koto|sc=Jpan}}
+* {{ttbc|Javanese}}: {{t-|jv|barang}}
+* {{ttbc|Kurdish}}:
+*: Sorani: {{t|ku|شت|tr=shit|sc=ku-Arab}}
+* {{ttbc|Luhya}}: {{tø|luy|sindu}}
+* {{ttbc|Maltese}}: {{t-|mt|ħaġa}}
+* {{ttbc|Mongolian}}: {{t-|mn|юм|sc=Cyrl}}
+* {{ttbc|Occitan}}: {{t+|oc|causa|f}}
+* {{ttbc|Punjabi}}: {{t-|pa|ਸ਼ੈ|tr=šai}}
+* {{ttbc|Romanian}}: {{t-|ro|chestie}}
+* {{ttbc|Russian}}: {{t+|ru|предмет|m|tr=predmét|sc=Cyrl}}
 * {{ttbc|si}}: [[දෙය]] (deya)
+* {{ttbc|Slovak}}: {{t-|sk|vec|f}}
+* {{ttbc|Southern Amami-Oshima}}: {{tø|ams|むん|tr=mun}}
+* {{ttbc|Swedish}}: {{t+|sv|grej|c}}
+* {{ttbc|Thai}}: {{t-|th|สิ่งของ|tr=sìng kŏng}}
+* {{ttbc|Tigrinya}}: {{t-|ti|ነገር|tr=negerɨ|sc=Ethi}}
+* {{ttbc|Turkish: {{t+|tr|şey}}
+* {{ttbc|Volapük}}: {{t+|vo|din}}
+* {{ttbc|Yiddish}}: {{t-|yi|זאַך|tr=zakh|f}}, {{t-|yi|חפֿץ|tr=kheyfets|m}}
 {{trans-bottom}}
 
 ====External links====
