/* Usage notes */ <theory#18884157>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -35,7 +35,7 @@ From {{etyl|LL.}} {{term|lang=la|theoria|theōria}}, from {{etyl|grc}} {{term|θ
 #: ''A '''theory''' is consistent if it has a model.''
 
 ====Usage notes====
-In scientific discourse, the sense “unproven conjecture” is discouraged (with {{term|hypothesis|lang=en}} or {{term|conjecture|lang=en}} preferred), due to unintentional ambiguity and intentional equivocation with the sense “well-developed statement or structure”.
+In scientific discourse, sense #5, “unproven conjecture”, is discouraged (with {{term|hypothesis|lang=en}} or {{term|conjecture|lang=en}} preferred), due to unintentional ambiguity and intentional equivocation with sense #2, “well-developed statement or structure”.
 
 ====Synonyms====
 * See also [[Wikisaurus:supposition]]
