--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -81,10 +81,11 @@ From {{etyl|ang}} verb {{term|beodan|bēodan|offer, announce|lang=ang}}. Conflat
 * Dutch: {{t+|nl|bieden}}
 * Finnish: {{t+|fi|tarjota}}, {{t-|fi|tehdä tarjous}}
 * French: {{t-|fr|faire une enchère}} (at auction)
-{{trans-mid}}
 * German: {{t+|de|bieten}}
+{{trans-mid}}
 * Italian: {{t-|it|fare un'offerta per un'asta}}
 * Japanese: {{t-|ja|値をつける|tr=ねをつける, ne-o tsukeru}}, {{t-|ja|入札する|tr=にゅうさつする, nyūsatsu-suru}}
+* Jèrriais: {{tø|roa-jer|offri}}
 * Russian: {{t-|ru|предлагать цену|tr=predlagát' cénu}}
 * Thai: {{t-|th|ประมูล|tr=bpràmoon}}
 {{trans-bottom}}
