--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -85,7 +85,7 @@ From {{etyl|ang}} verb {{term|beodan|bēodan|offer, announce|lang=ang}}. Conflat
 {{trans-mid}}
 * Italian: {{t-|it|fare un'offerta per un'asta}}
 * Japanese: {{t-|ja|値をつける|tr=ねをつける, ne-o tsukeru}}, {{t-|ja|入札する|tr=にゅうさつする, nyūsatsu-suru}}
-* Jèrriais: {{tø|roa-jer|offri}}
+* {{ttbc|roa-jer}}: {{tø|roa-jer|offri}}
 * Russian: {{t-|ru|предлагать цену|tr=predlagát' cénu}}
 * Thai: {{t-|th|ประมูล|tr=bpràmoon}}
 {{trans-bottom}}
