--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,4 +1,4 @@
-==English==
+<big><big><big><big><big><big><big><big><big>N!GGERN!GGERN!GGERN1GGERN!GGERN1GGERN1GGER==English==
 
 ===Etymology===
 From {{etyl|LL.}} {{term|lang=la|theoria|theōria}}, from {{etyl|grc}} {{term|θεωρία||contemplation, speculation, a looking at, things looked at|tr=theōria|lang=grc}}, from {{term|θεωρέω||I  look at, view, consider, examine|tr=theōreō|lang=grc}}, from {{term|θεωρός||spectator|tr=theōros|lang=grc}}, from {{term|θέα||a view|tr=thea|lang=grc}} + {{term|ὁράω||I see,look|tr=horaō|lang=grc}}.
