--- a/en/m/metalliferous.801832.wikitext
+++ b/en/m/metalliferous.801832.wikitext
@@ -48,7 +48,10 @@
 
 ====Translations====
 {{trans-top|containing a metallic element}}
+* French: {{t|fr|métallifère}}
+* Italian: {{t|it|metallifero}}
 {{trans-mid}}
+* Manx: {{t|gv|meainagh}}
 {{trans-bottom}}
 
 [[et:metalliferous]]
