--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -389,6 +389,12 @@ Shortening of {{term|pigeon}}
 
 ----
 
+==Croatian==
+
+Abbreviation of
+
+[[politika]] [[i]] [[gospodarstvo]] - politics and economics class
+
 ==Danish==
 
 ===Etymology===
