--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm}} {{term|beholden|lang=enm}}, from {{etyl|ang}} {{term|behealdan||to hold, have, occupy, possess, guard, preserve, contain, belong, keep, observe, consider, behold, look at, gaze on, see, signify, avail, effect, take care, beware, be cautious, restrain, act, behave|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|bihaldanan||to hold with, keep|lang=gem-pro}}, equivalent to {{prefix|be|hold}}. Cognate with {{etyl|nl|-}} {{term|behouden||to keep, restrain, preserve|lang=nl}}, {{etyl|de|-}} {{term|behalten||to keep, restrain, remember|lang=de}}, {{etyl|da|-}} and {{etyl|no|-}} {{term|beholde||to keep|lang=da|lang=no}}.
+From {{etyl|enm}} {{term|beholden|lang=enm}}, from {{etyl|ang}} {{term|behealdan||to hold, have, occupy, possess, guard, preserve, contain, belong, keep, observe, consider, behold, look at, gaze on, see, signify, avail, effect, take care, beware, be cautious, restrain, act, behave|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|bihaldanan||to hold with, keep|lang=gem-pro}}, equivalent to {{prefix|be|hold}}. Cognate with {{etyl|nl|-}} {{term|behouden||to keep, restrain, preserve|lang=nl}}, {{etyl|de|-}} {{term|behalten||to keep, restrain, remember|lang=de}}, {{etyl|da|-}} and {{etyl|no|-}} {{term|beholde||to keep|lang=da|lang=no}} and {{etyl|sv|-}} {{term|behålla||to keep|lang=sv}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/bɪˈhəʊld/}}, {{X-SAMPA|/bI"h@Uld/}}
