--- a/en/u/unselfishness.742253.wikitext
+++ b/en/u/unselfishness.742253.wikitext
@@ -1,7 +1,17 @@
 ==English==
+
+===Etymology===
+{{suffix|unselfish|ness}}
+
 ===Noun===
 {{en-noun|-}}
+
 # The state of being [[unselfish]].
+
+====Translations====
+{{trans-top|the state of being unselfish}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[et:unselfishness]]
 [[ko:unselfishness]]
