t+fr:[[perdre]] t+de:[[verfehlen]] ([[WT:EDIT|Assisted]]) <miss out#18908646>

--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -20,9 +20,9 @@
 * Chinese:
 *: Mandarin: {{t|cmn|錯過|sc=Hani}}, {{t|cmn|错过|tr=cuòguò|sc=Hani}}, {{t|cmn|放過|sc=Hani}}, {{t|cmn|放过|tr=fàngguò|sc=Hani}}, {{t|cmn|丟掉|sc=Hani}}, {{t|cmn|丢掉|tr=diūdiào|sc=Hani}}
 * Finnish: {{t+|fi|menettää}}, [[jäädä]] [[jostain]] {{t+|fi|paitsi}}
-* French: {{t|fr|manquer}}
+* French: {{t|fr|manquer}}, {{t|fr|perdre}}
 {{trans-mid}}
-* German: {{t|de|verpassen}}
+* German: {{t|de|verpassen}}, {{t|de|verfehlen}}
 * Japanese: {{t|ja|逃す|tr=のがす, nogasu|sc=Jpan}}
 * Polish: {{t|pl|opuszczać}} {{impf}}, {{t|pl|opuścić}} {{pf}}
 * Russian: {{t|ru|упускать|tr=upuskátʹ|sc=Cyrl}} {{impf}}, {{t|ru|упустить|tr=upustítʹ|sc=Cyrl}} {{pf}}
