--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -20,7 +20,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|錯過|sc=Hani}}, {{t|cmn|错过|tr=cuòguò|sc=Hani}}, {{t|cmn|放過|sc=Hani}}, {{t|cmn|放过|tr=fàngguò|sc=Hani}}, {{t|cmn|丟掉|sc=Hani}}, {{t|cmn|丢掉|tr=diūdiào|sc=Hani}}
 * Finnish: {{t+|fi|menettää}}, [[jäädä]] [[jostain]] {{t+|fi|paitsi}}
-* French: {{t|fr|manquer}}, {{t|fr|perdre}}
+* French: {{t|fr|manquer}}, {{t|fr|perdre}}, {{t|fr|laisse passer}}, {{t|fr|louper}}
 {{trans-mid}}
 * German: {{t|de|verpassen}}, {{t|de|verfehlen}}
 * Japanese: {{t|ja|逃す|tr=のがす, nogasu|sc=Jpan}}
