--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -165,6 +165,23 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 [[Category:Old Irish pronouns]]
 
 ----
+==Pijin==
+===Alternative forms===
+*{{l|pis|-em}}
+*{{l|pis|-im}}
+
+===Etymology===
+{{etyl|en|pis}} {{term|him}}, {{term|'em}}
+
+===Suffix===
+{{head|pis|suffix|sort=um}}
+
+# {{non-gloss definition|Indicates a [[transitive verb]]}}
+
+====Usage notes====
+The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the last vowel in the stem is ''u'', then the suffix is ''-um''. Otherwise, use {{term|-em|lang=pis}} or {{term|-im|lang=pis}}.
+
+----
 
 ==Scots==
 
@@ -186,7 +203,7 @@ Probably of jocular formation, based partly on Latin {{term|-um|lang=la}} and pa
 ====Suffix====
 {{head|sco|suffix|sort=um}}
 
-# Added to nouns or verbs to form nouns with diminutive or hypocoristic force.
+# {{n-g|Added to nouns or verbs to form nouns with [[diminutive]] or [[hypocoristic]] force}}
 
 ----
 
