t+pis:[[aelan]] t+rap:[[motu]] t+bi:[[aelan]] t+niu:[[motu]] t+ty:[[motu]] t+to:[[motu]] t+haw:[[moku]] t+pmt:[[motu]] ([[WT:EDIT|Assisted]]) <island#18928257>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -86,6 +86,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Basque: {{t+|eu|irla}}, {{t+|eu|uharte}}
 * Belarusian: {{t-|be|востраў|m|tr=vóstraŭ}}, {{t-|be|выспа|f|tr=výspa}}
 * Bengali: {{t-|bn|দ্বীপ|tr=dip|sc=Beng}}
+* Bislama: {{t|bi|aelan}}
 * Breton: {{t+|br|enez}}
 * Bulgarian: {{t+|bg|остров|m|tr=óstrov}}
 * Burmese: {{t+|my|ကျွန်း|tr=kyun:|sc=Mymr}}
@@ -127,7 +128,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Gujarati: {{t-|gu|દ્વીપ|tr=dvīp|sc=Gujr}}
 * Haitian Creole: {{tø|ht|zile}}, {{tø|ht|zil}}
 * {{trreq|ha}}
-* {{trreq|haw}}
+* Hawaiian: {{tø|haw|moku}}
 * Hebrew: {{t+|he|אי|m|alt=אִי|tr=i}}
 * Hindi: {{t-|hi|द्वीप|m|tr=dvīp|sc=Deva}}, {{t-|hi|टापू|m|tr=ṭāpū|sc=Deva}}
 * Hungarian: {{t+|hu|sziget}}
@@ -178,6 +179,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Mizo: {{tø|lus|thliarkar|lus=Mizo}}
 * Mongolian: {{t+|mn|арал|tr=aral|sc=Cyrl}}
 * {{trreq|ne}}
+* Niuean: {{tø|niu|motu}}
 * Norfuk: {{tø|cpe-nor|ailen}}
 * Norman: {{tø|roa-nor|île}}
 * Norwegian: {{t+|no|øy|m|f}}
@@ -192,11 +194,13 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * {{trreq|ps}}
 * Persian: {{t+|fa|جزیره|tr=jazire|sc=fa-Arab}}
 * Phoenician: {{tø|phn|𐤀𐤉|tr=ʔy|sc=Phnx}}
+* Pijin: {{tø|pis|aelan}}
 * Polish: {{t+|pl|wyspa|f}}
 * Portuguese: {{t+|pt|ilha|f}}
 * Punjabi: {{t-|pa|ਟਾਪੂ|tr=ṭāpū}}
 * Quechua: {{t-|qu|wat'a}}
 * {{trreq|raj}}
+* Rapa Nui: {{tø|rap|motu}}
 * Romani: {{tø|rom|dvip}}
 * Romanian: {{t-|ro|insulă|f}}
 * Romansch: {{t-|rm|insla|f}}
@@ -221,6 +225,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Swahili: {{t+|sw|kisiwa}}
 * Swedish: {{t+|sv|ö|c}}, {{t+|sv|holme|c}}, {{t+|sv|kobbe|c}}, {{t+|sv|skär|n}}
 * Tagalog: {{t+|tl|pulo}} archipelago- kapuluan
+* Tahitian: {{tø|ty|motu}}
 * Tajik: {{t-|tg|ҷазира|tr=jazira|sc=Cyrl}}
 * Tamil: {{t+|ta|தீவு|tr=tīvu}}
 * Tatar: {{t-|tt|utraw}}, {{t-|tt|атау|sc=Cyrl}}
@@ -228,6 +233,8 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Thai: {{t+|th|เกาะ|tr=gòr}}
 * Tigrinya: {{t-|ti|ደሴት|f|tr=desie̯tɨ|sc=Ethi}}
 * Tok Pisin: {{t-|tpi|ailan}}
+* Tongan: {{t|to|motu}}
+* Tuamotuan: {{tø|pmt|motu}}
 * Turkish: {{t+|tr|ada}}, {{t+|tr|aral}}, {{t+|tr|simek}}, {{t+|tr|cezire}}
 * Turkmen: {{t+|tk|ada}}
 * Tuvan: {{tø|tyv|ортулук|tr=ortuluq|sc=Cyrl}}
