--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -103,6 +103,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Georgian: {{t+|ka|ღორი|tr=ḡori|sc=Geor}}
 * German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t-|de|Hausschwein|n}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}, {{t+|el|χοίρος|m|tr=choíros}}
+** Ancient Greek: {{t|grc|ὗς|tr=hūs}}
 * Hawaiian: {{tø|haw|puaʻa}}
 * Hebrew: {{t+|he|חזיר|m|tr=khazír|sc=Hebr}}, {{t-|he|חֲזִיר|m|tr=khazír|sc=Hebr}}
 * Hindi: {{t-|hi|सूअर|m|tr=sū'ar|sc=Deva}}
