--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|grc}} {{rfscript|grc}} {{term|||tr=phyllum|lang=grc|leaf}} + {{term|||tr=xera|lang=grc|dry}}
+From {{etyl|grc}} {{rfscript|grc}} {{term|φύλλον||tr=phyllon|lang=grc|leaf}} + {{term|ξηρός||tr=xeros|lang=grc|dry}}
 
 ===Noun===
 {{en-noun|phylloxerae}}
