t+ms:[[pembahagian]] t+ms:[[bahagian]] ([[WT:EDIT|Assisted]]) <division#18933772>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -67,7 +67,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Kurdish:
 *: Sorani: {{t+|ku|دابه‌ش|sc=ku-Arab}}
 * Macedonian: {{t|mk|делење|n|tr=délenje|sc=Cyrl}}, {{t|mk|поделба|f|tr=pódelba|sc=Cyrl}}
-* Malay: {{t-|ms|divisi|xs=Malay}}
+* Malay: {{t-|ms|divisi|xs=Malay}}, {{t|ms|pembahagian}}
 * Polish: {{t+|pl|podział|m}}
 * Portuguese: {{t+|pt|divisão|f}}
 * Romanian: [[diviziune]] {{f}}
@@ -93,6 +93,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Kurdish:
 *: Sorani: {{t-|ku|به‌ش|sc=ku-Arab}}
 * Macedonian: {{t|mk|дел|m|tr=del|sc=Cyrl}}
+* Malay: {{t|ms|bahagian}}
 * Malayalam: [[വിഭാഗം]] (vibhaagam)
 * Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
 * West Frisian: {{t-|fy|ôfdieling|c|xs=West Frisian}}
