--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -43,7 +43,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Bulgarian: {{t+|bg|крадец|m}}
 * Dutch: {{t+|nl|oplichter|m}}, {{t+|nl|oplichtster|f}}, {{t+|nl|zwendelaar|m}}, {{t-|nl|zwendelaarster|f}}, {{t+|nl|afzetter|m}}, {{t-|nl|afzetster|f}}, {{t+|nl|bedrieger|m}}, {{t-|nl|bedriegster|f}}
 * Finnish: {{t+|fi|rikollinen}}, {{t+|fi|konna}}
-* French: {{t+|fr|escroc|m}}
+* French: {{t+|fr|escroc|m}}, {{t|fr|arnaqueur}}
 * German: {{t+|de|Gauner|m}}, {{t+|de|Ganove|m}}
 {{trans-mid}}
 * Icelandic: {{t+|is|glæpamaður|m}}, {{t-|is|þorpari|m}}
@@ -72,6 +72,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Bulgarian: {{t+|bg|извивка|f}}
 * Finnish: {{t-|fi|taive}}
 {{trans-mid}}
+* French: {{t|fr|courbe|f}}
 * Russian: {{t+|ru|изгиб|sc=Cyrl}}
 * Spanish: {{t-|es|doblez|m}}, {{t+|es|curva|f}}, {{t-|es|curvidad|f}}, {{t-|es|torcedura|f}}
 {{trans-bottom}}
@@ -92,6 +93,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Bulgarian: {{t+|bg|извивам}}
 * Finnish: {{t-|fi|koukistaa}}
 {{trans-mid}}
+* French: {{t|fr|courber}}
 * German: [[krümmen]]
 * Russian: {{t+|ru|сгибать}}
 * Spanish: {{t-|es|curvar}}, {{t+|es|doblar}}, {{t+|es|torcer}}, {{t+|es|enchuecar}}
