--- a/en/r/Russian gold.855392.wikitext
+++ b/en/r/Russian gold.855392.wikitext
@@ -1,7 +1,7 @@
 ==English==
-
-===Noun===
-{{en-noun}}
 {{wikipedia}}
 
-#A name for a [[gold]]-[[copper]] [[alloy]] more commonly called [[rose gold]].  The alloy was popular in Russia at one time but the term is now less common than it was.
+===Noun===
+{{en-noun|sg=[[Russian]] [[gold]]|-}}
+
+#A [[gold]]-[[copper]] [[alloy]], more commonly called [[rose gold]], popular in Russia at one time.
