/* Noun */ <least weasel#18939791>

--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -7,7 +7,7 @@
 {{wikipedia}}
 {{en-noun|head=[[least]] [[weasel]]}}
 
-# {{taxlink|Mustela nivalis|species}}, the smallest member of the [[weasel]] [[genus]] (''[[Mustela]]'').
+# ''[[Mustela nivalis]]'', the smallest member of the [[weasel]] [[genus]] (''[[Mustela]]'').
 
 ====Translations====
 {{trans-top|''Mustela nivalis''}}
