--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -62,7 +62,7 @@ From {{etyl|enm}} {{term|sir|lang=enm}}, from {{etyl|fro}} {{term|sire||master, 
 * Dutch: {{t+|nl|meneer|m}}, {{t+|nl|mijnheer|m}}
 * French: {{t+|fr|monsieur|m}}
 * German: [[Herr]] {{m}}, [[mein Herr]] {{m}} {{gloss|my lord}}
-* Greek: {{t+|gr|κύριος|m}}, [[κύριε]] {{m}} ([[vocative case]])
+* Greek: {{t+|el|κύριος|m}}, [[κύριε]] {{m}} ([[vocative case]])
 * Hindi: {{t-|hi|श्रीमान|m|tr=śrīmān|xs=Hindi}}, {{t-|hi|श्री|tr=śrī|sc=Deva}}, {{t-|hi|सर|m|tr=sar|sc=Deva}}, {{t-|hi|साहिब|m|tr=sāhib|sc=Deva}}, {{t-|hi|महोदय|m|tr=mahōday|sc=Deva}}
 {{trans-mid}}
 * Japanese: {{t-|ja|だんな|tr=danna}}, {{t-|ja|サー|tr=sā}} {{qualifier|in translations from English}}
