--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -37,6 +37,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 {{trans-mid}}
 * Hungarian: {{t+|hu|fogadás}}
 * Italian: {{t+|it|scommessa|f}}
+* Jèrriais: {{tø|roa-jer|gageaille|f}}
 * Latvian: [[likme]] {{f}}
 * Norwegian: {{t-|no|veddemål|n}}
 * Polish: {{t+|pl|zakład|m}}
