t+roa-jer:[[gagi]] t-balance ([[WT:EDIT|Assisted]]) <bet#18941834>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -89,12 +89,13 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * French: {{t+|fr|parier}}
 * Georgian: {{t-|ka|დანიძლავება|sc=Geor}}
 * German: {{t+|de|wetten}}
-{{trans-mid}}
 * Greek: {{t+|el|ποντάρω|tr=pontáro}}, {{t+|el|στοιχηματίζω|tr=stoichimatízo}}
+{{trans-mid}}
 * Hebrew: {{t-|he|התערב|tr=hit'arév}}
 * Indonesian: {{t+|id|taruh}}
 * Italian: {{t-|it|scommettere}}
 * Japanese: {{t+|ja|賭ける}} ([[かける]], kakeru)
+* Jèrriais: {{tø|roa-jer|gagi}}
 * Latvian: {{t-|lv|derēt}}
 * Norwegian: {{t-|no|vedde}}
 * Polish: {{t+|pl|postawić}}, {{t+|pl|zakładać się}}
