--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -48,18 +48,18 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 
 ====Translations====
 {{trans-top|act or process of dividing anything}}
-* Afrikaans: [[verdeling]], {{t-|af|divisie|xs=Afrikaans}}
-* Albanian: {{t-|sq|ndarje|xs=Albanian}}
+* Afrikaans: {{t|af|verdeling}}, {{t-|af|divisie}}
+* Albanian: {{t-|sq|ndarje}}
 * Bulgarian: {{t+|bg|делене|n}}, {{t+|bg|разделяне|n}}
 * Czech: {{t+|cs|dělení|n}}
-* Dutch: [[deling]] {{f}}; [[verdeling]] {{f}}; [[scheiding]] {{f}}
-* Esperanto: {{t-|eo|divido|xs=Esperanto}}, {{t-|eo|dividado}}
+* Dutch: {{t|nl|deling|f}}, {{t|nl|verdeling|f}}, {{t|nl|scheiding|f}}
+* Esperanto: {{t-|eo|divido}}, {{t-|eo|dividado}}
 * Finnish: {{t-|fi|jakaminen}}, {{t+|fi|jako}}
 * French: {{t+|fr|division|f}}
 * German: {{t+|de|Teilung|f}}
 * Greek: {{t+|el|διαίρεση|f|tr=δiéresi}}
-* Hebrew: [[חלוקה]] (khaluqa) {{f}}
-* Indonesian: {{t+|id|divisi|xs=Indonesian}}
+* Hebrew: {{t|he|חלוקה|f|tr=khaluqa|sc=Hebr}}
+* Indonesian: {{t+|id|divisi}}
 * Irish: {{t-|ga|deighilt|f}}
 * Italian: {{t+|it|divisione|f}}
 * Korean: {{t+|ko|부서|tr=buseo|sc=Hang}}
@@ -67,133 +67,133 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Kurdish:
 *: Sorani: {{t+|ku|دابه‌ش|sc=ku-Arab}}
 * Macedonian: {{t|mk|делење|n|tr=délenje|sc=Cyrl}}, {{t|mk|поделба|f|tr=pódelba|sc=Cyrl}}
-* Malay: {{t-|ms|divisi|xs=Malay}}, {{t|ms|pembahagian}}
+* Malay: {{t-|ms|divisi}}, {{t|ms|pembahagian}}
 * Polish: {{t+|pl|podział|m}}
 * Portuguese: {{t+|pt|divisão|f}}
-* Romanian: [[diviziune]] {{f}}
+* Romanian: {{t|ro|diviziune|f}}
 * Russian: {{t+|ru|раздел|m|tr=razdél}}, {{t+|ru|деление|n|tr=delénije}}
-* Slovene: [[deljenje]] {{n}}
+* Slovene: {{t|sl|deljenje|n}}
 * Spanish: {{t+|es|división|f}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
-* Telugu: [[విభజన]]
-* Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
-* West Frisian: {{t-|fy|yndieling|c|xs=West Frisian}}
+* Telugu: {{t|te|విభజన|sc=Telu}}
+* Urdu: {{t|ur|تقسیم|f|tr=taqseem|sc=ur-Arab}}
+* West Frisian: {{t-|fy|yndieling|c}}
 {{trans-bottom}}
 
 {{trans-top|each of the parts resulting from division}}
-* Afrikaans: [[gedeelte]]
+* Afrikaans: {{t|af|gedeelte}}
 * Bulgarian: {{t+|bg|част|f}}, {{t+|bg|раздел|m}}
 * Czech: {{t+|cs|díl|m}}
 * Dutch: {{t+|nl|deel|n}}, {{t+|nl|gedeelte|n}}
 * Finnish: {{t+|fi|osa}}
 * German: {{t+|de|Teil|m}}
 {{trans-mid}}
-* Indonesian: {{t+|id|bagian|xs=Indonesian}}
+* Indonesian: {{t+|id|bagian}}
 * Kurdish:
 *: Sorani: {{t-|ku|به‌ش|sc=ku-Arab}}
 * Macedonian: {{t|mk|дел|m|tr=del|sc=Cyrl}}
 * Malay: {{t|ms|bahagian}}
-* Malayalam: [[വിഭാഗം]] (vibhaagam)
-* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
-* West Frisian: {{t-|fy|ôfdieling|c|xs=West Frisian}}
+* Malayalam: {{t|ml|വിഭാഗം|tr=vibhaagam|sc=Mlym}}
+* Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
+* West Frisian: {{t-|fy|ôfdieling|c}}
 {{trans-bottom}}
 
 {{trans-top|arithmetic: process of dividing a number by another}}
-* Afrikaans: [[deel]]
+* Afrikaans: {{t|af|deel}}
 * Bulgarian: {{t+|bg|деление|n}}
 * Czech: {{t+|cs|dělení|n}}
-* Dutch: [[deling]] {{f}}; [[delen]] {{n}}
-* Esperanto: {{t-|eo|divido|xs=Esperanto}}
+* Dutch: {{t|nl|deling|f}}, {{t|nl|delen|n}}
+* Esperanto: {{t-|eo|divido}}
 * Finnish: {{t+|fi|jako}}, {{t-|fi|jakaminen}}
 * French: {{t+|fr|division|f}}
 * German: {{t+|de|Division|f}}
 * Greek: {{t+|el|διαίρεση|f|tr=δiéresi}}
-* Hebrew: [[חילוק]] (khiluq) {{m}}
+* Hebrew: {{t|he|חילוק|m|tr=khiluq|sc=Hebr}}
 * Icelandic: {{t+|is|deiling|f}}
 * Italian: {{t+|it|divisione|f}}
 {{trans-mid}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[دابه‌ش]]}}
+*: Sorani: {{t|ckb|دابه‌ش|sc=ku-Arab}}
 * Macedonian: {{t|mk|делење|n|tr=délenje|sc=Cyrl}}
-* Persian: {{t+|fa|تقسیم|xs=Persian}}
+* Persian: {{t+|fa|تقسیم}}
 * Polish: {{t+|pl|dzielenie|n}}
 * Romanian: {{t-|ro|impartire|f}}
 * Russian: {{t+|ru|деление|n|tr=delénije}}
-* Slovene: [[deljenje]] {{n}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
+* Slovene: {{t|sl|deljenje|n}}
+* Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
-* Telugu: [[భాగహారము]]
-* Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
-* West Frisian: {{t-|fy|dieling|c|xs=West Frisian}}
+* Telugu: {{t|te|భాగహారము|sc=Telu}}
+* Urdu: {{t|ur|تقسیم|f|tr=taqseem|sc=ur-Arab}}
+* West Frisian: {{t-|fy|dieling|c}}
 {{trans-bottom}}
 
 {{trans-top|arithmetic: calculation involving this process}}
-* Afrikaans: [[deel]]
+* Afrikaans: {{t|af|deel}}
 * Bulgarian: {{t+|bg|деление|n}}
 * Czech: {{t+|cs|dělení|n}}
-* Dutch: [[deling]] {{f}}; [[staartdeling]] {{f}}
+* Dutch: {{t|nl|deling|f}}, {{t|nl|staartdeling|f}}
 * Finnish: {{t+|fi|jakolasku}}
 * French: {{t+|fr|division|f}}
 * Greek: {{t+|el|διαίρεση|f|tr=δiéresi}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[دابه‌ش]]}}
+*: Sorani: {{t|ckb|دابه‌ش|sc=ku-Arab}}
 {{trans-mid}}
 * Macedonian: {{t|mk|делење|n|tr=délenje|sc=Cyrl}}
 * Polish: {{t+|pl|dzielenie|n}}
 * Russian: {{t+|ru|деление|n|tr=delénije}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
-* Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
-* West Frisian: {{t-|fy|dieling|c|xs=West Frisian}}
+* Urdu: {{t|ur|تقسیم|f|tr=taqseem|sc=ur-Arab}}
+* West Frisian: {{t-|fy|dieling|c}}
 {{trans-bottom}}
 
 {{trans-top|large military unit}}
-* Afrikaans: [[afdeling]]; [[skeiding]]
+* Afrikaans: {{t|af|afdeling}}, {{t|af|skeiding}}
 * Bulgarian: {{t-|bg|дивизия|f}}
 * Czech: {{t-|cs|divize|f}}
-* Dutch: [[divisie]] {{f}},
-* Esperanto: [[divizio]]
+* Dutch: {{t|nl|divisie|f}}
+* Esperanto: {{t|eo|divizio}}
 * Finnish: {{t-|fi|divisioona}}
 * French: {{t+|fr|division|f}}
 * German: {{t+|de|Abteilung|f}}, {{t+|de|Division|f}}
 * Greek: {{t+|el|μεραρχία|f|tr=merarchia}}
-* Hebrew: [[אוגדה]] (ugda) {{f}}
-* Indonesian: {{t+|id|divisi|xs=Indonesian}}
+* Hebrew: {{t|he|אוגדה|f|tr=ugda|sc=Hebr}}
+* Indonesian: {{t+|id|divisi}}
 * Khmer: {{t-|km|កងពលធំ|tr=kong pol thom|sc=Khmr}}
 {{trans-mid}}
 * Korean: {{t+|ko|사단|tr=sadan|sc=Kore}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[فرقه‌]]}}
+*: Sorani: {{t|ckb|فرقه‌|sc=ku-Arab}}
 * Macedonian: {{t|mk|дивизија|f|tr=divízija|sc=Cyrl}}
-* Polish: [[dywizja]] {{f}}
+* Polish: {{t|pl|dywizja|f}}
 * Romanian: {{t-|ro|impartire|f}}
-* Russian: [[дивизия]] (divízija) {{f}} ''army'', [[дивизион]] (divizión) {{m}} ''navy''
+* Russian: {{t|ru|дивизия|f|tr=divízija|sc=Cyrl}} {{qualifier|in the army}}, {{t|ru|дивизион|m|tr=divizión|sc=Cyrl}} {{qualifier|in the navy}}
 * Slovene: {{t+|sl|divizija|f}}
-* Swahili: {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
-* Telugu: [[విభాగము]]
-* West Frisian: {{t-|fy|divyzje|c|xs=West Frisian}}
+* Telugu: {{t|te|విభాగము|sc=Telu}}
+* West Frisian: {{t-|fy|divyzje|c}}
 {{trans-bottom}}
 
 {{trans-top|section of a large company}}
-* Afrikaans: [[afdeling]]
+* Afrikaans: {{t|af|afdeling}}
 * Bulgarian: {{t+|bg|подразделение|n}}
 * Czech: {{t-|cs|divize|f}}
-* Dutch: [[afdeling]] {{f}}, [[divisie]] {{f}}, [[eenheid]] {{f}}
+* Dutch: {{t|nl|afdeling|f}}, {{t|nl|divisie|f}}, {{t|nl|eenheid|f}}
 * French: {{t+|fr|division|f}}
 * Greek: {{t+|el|διεύθυνση|f|tr=δiefθinsi}}
-* Indonesian: {{t+|id|divisi|xs=Indonesian}}
+* Indonesian: {{t+|id|divisi}}
 * Kurdish:
 *: Sorani: {{t-|ku|به‌ش|sc=ku-Arab}}
 {{trans-mid}}
 * Macedonian: {{t|mk|оддел|m|tr=óddel|sc=Cyrl}}, {{t|mk|одделение|n|tr=otdelénie|sc=Cyrl}}
-* Romanian: [[divizie]] {{f}}
+* Romanian: {{t|ro|divizie|f}}
 * Russian: {{t+|ru|отдел|m|tr=otdél}}, {{t+|ru|отделение|n|tr=otdelénije}}, {{t+|ru|секция|f|tr=sékcija}}
-* Swahili: {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
-* Telugu: [[విభాగము]]
-* West Frisian: {{t-|fy|divyzje|c|xs=West Frisian}}
+* Telugu: {{t|te|విభాగము|sc=Telu}}
+* West Frisian: {{t-|fy|divyzje|c}}
 {{trans-bottom}}
 
 {{trans-top|biology: taxonomic classification of plants}}
@@ -201,11 +201,11 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Finnish: {{t+|fi|kaari}}, {{t-|fi|pääjakso}}
 * Khmer: {{t+|km|សាខា|tr=sar khar|sc=Khmr}}
 * Macedonian: {{t|mk|оддел|m|tr=óddel|sc=Cyrl}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 {{trans-mid}}
 * Telugu: {{t+|te|విభాగము}}
-* Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
-* West Frisian: {{t-|fy|klasse|c|xs=West Frisian}}
+* Urdu: {{t|ur|تقسیم|f|tr=taqseem|sc=ur-Arab}}
+* West Frisian: {{t-|fy|klasse|c}}
 {{trans-bottom}}
 
 {{trans-top|disagreement; a difference of viewpoint}}
@@ -213,21 +213,21 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Irish: {{t-|ga|deighilt|f}}
 {{trans-mid}}
 * Macedonian: {{t|mk|поделеност|f|tr=podélenost|sc=Cyrl}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
-* West Frisian: {{t-|fy|ôfstimming|c|xs=West Frisian}}
+* Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
+* West Frisian: {{t-|fy|ôfstimming|c}}
 {{trans-bottom}}
 
 {{trans-top|law: concept of separate responsibility}}
-* Dutch: [[deelbaarheid]] (van prestasie) {{f}}
-* Indonesian: {{t+|id|pemekaran|xs=Indonesian}}
+* Dutch: {{qualifier|van prestasie}} {{t|nl|deelbaarheid|f}}
+* Indonesian: {{t+|id|pemekaran}}
 {{trans-mid}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi}}
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|br}}: [[rannadur]] {{m}}, -ioú {{p}}
-* {{ttbc|et}}: [[jagamine]] (1)
-* {{ttbc|es}}: [[división]] {{f}}
+* {{ttbc|br}}: {{t|br|rannadur|m}}, {{t|br|-ioú|p}}
+* {{ttbc|et}}: {{qualifier|1}} {{t|et|jagamine}}
+* {{ttbc|es}}: {{t|es|división|f}}
 {{trans-bottom}}
 
 ===See also===
